defconfigs: refresh configs and normalize names

--- a/config/defconfigs/base-armada5xx-cubox.conf
+++ b/config/defconfigs/base-armada5xx-cubox.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120710-r14678"
+CONFIG_KERNELVERSION="devel-20120730-r14886"
 CONFIG_MODULES=y
 CONFIG_FLAVOUR_base=y
 # CONFIG_FLAVOUR_geexbox is not set
@@ -254,6 +254,7 @@ CONFIG_PKG_cryptodev=y
 #
 # CONFIG_PKG_firmware-arm-imx5 is not set
 # CONFIG_PKG_firmware-arm-imx6 is not set
+# CONFIG_PKG_firmware-arm-raspberrypi is not set
 # CONFIG_PKG_firmware-arm-syslink-ipc is not set
 # CONFIG_PKG_firmware-arm-syslink-mm is not set
 # CONFIG_PKG_firmware-arm-wl1271 is not set
@@ -399,6 +400,7 @@ CONFIG_PKG_expat=y
 # CONFIG_PKG_gdk-pixbuf is not set
 CONFIG_PKG_gettext=y
 # CONFIG_PKG_glibmm is not set
+CONFIG_PKG_gmp=y
 CONFIG_PKG_gnutls=y
 # CONFIG_PKG_grilo is not set
 # CONFIG_PKG_grilo-plugins is not set
@@ -419,7 +421,6 @@ CONFIG_PKG_gnutls=y
 # CONFIG_PKG_imx6-graphics is not set
 # CONFIG_PKG_imx6-lib is not set
 # CONFIG_PKG_jasper is not set
-# CONFIG_PKG_jpeg is not set
 # CONFIG_PKG_json is not set
 # CONFIG_PKG_json-glib is not set
 # CONFIG_PKG_kissfft is not set
@@ -431,6 +432,7 @@ CONFIG_PKG_gnutls=y
 # CONFIG_PKG_libass is not set
 # CONFIG_PKG_libatasmart is not set
 # CONFIG_PKG_libavc1394 is not set
+# CONFIG_PKG_libbmm is not set
 # CONFIG_PKG_libbridge is not set
 CONFIG_PKG_libcap=y
 # CONFIG_PKG_libcdaudio is not set
@@ -456,6 +458,7 @@ CONFIG_PKG_libgles-gc=y
 # CONFIG_PKG_libiconv is not set
 # CONFIG_PKG_libid3tag is not set
 # CONFIG_PKG_libiec61883 is not set
+# CONFIG_PKG_libjpeg-turbo is not set
 # CONFIG_PKG_liblockdev is not set
 # CONFIG_PKG_libmad is not set
 # CONFIG_PKG_libmicrohttpd is not set
@@ -507,6 +510,7 @@ CONFIG_PKG_libusb-compat=y
 # CONFIG_PKG_libyaml is not set
 # CONFIG_PKG_libz160 is not set
 # CONFIG_PKG_lzo is not set
+# CONFIG_PKG_marvell-ipp is not set
 # CONFIG_PKG_mediastreamer is not set
 # CONFIG_PKG_mesa is not set
 # CONFIG_PKG_mtdev is not set
@@ -554,6 +558,7 @@ CONFIG_PKG_pciids=y
 # CONFIG_PKG_tslib is not set
 # CONFIG_PKG_twolame is not set
 # CONFIG_PKG_v4l-utils is not set
+# CONFIG_PKG_vmeta is not set
 # CONFIG_PKG_wavpack is not set
 # CONFIG_PKG_yajl is not set
 CONFIG_PKG_zlib=y
@@ -563,21 +568,27 @@ CONFIG_PKG_zlib=y
 # misc
 #
 # CONFIG_PKG_baresip is not set
+# CONFIG_PKG_cpuburn is not set
 # CONFIG_PKG_elfutils is not set
 # CONFIG_PKG_ethtool is not set
 # CONFIG_PKG_glmark2 is not set
 # CONFIG_PKG_hdmiservice is not set
 # CONFIG_PKG_iioutils is not set
+# CONFIG_PKG_libxkbcommon is not set
 # CONFIG_PKG_linphone is not set
 # CONFIG_PKG_madplay is not set
 # CONFIG_PKG_maliit-framework is not set
 # CONFIG_PKG_maliit-plugins is not set
+# CONFIG_PKG_nbench is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
 # CONFIG_PKG_pvr is not set
 # CONFIG_PKG_rsync is not set
+# CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
+# CONFIG_PKG_wayland is not set
 # CONFIG_PKG_webrtc-audio-processing is not set
+# CONFIG_PKG_weston is not set
 
 #
 # multimedia
@@ -991,6 +1002,7 @@ CONFIG_PKG_usbutils=y
 # CONFIG_PKG_xf86-input-synaptics is not set
 # CONFIG_PKG_xf86-video-ati is not set
 # CONFIG_PKG_xf86-video-displaylink is not set
+# CONFIG_PKG_xf86-video-dove is not set
 # CONFIG_PKG_xf86-video-fbdev is not set
 # CONFIG_PKG_xf86-video-glamo is not set
 # CONFIG_PKG_xf86-video-imx5 is not set
@@ -1019,5 +1031,4 @@ CONFIG_OPT_COMPRESSION_METHOD="gzip"
 CONFIG_OPT_TARGET_LIBC="eglibc"
 CONFIG_OPT_KEYMAP="qwerty"
 CONFIG_OPT_EGL_PROVIDER="vivante"
-CONFIG_OPT_GLES_PROVIDER="vivante"
 CONFIG_OPT_NETWORK_BACKEND="connman"
