--- a/config/defconfigs/base-x86_64-generic.conf
+++ b/config/defconfigs/base-x86_64-generic.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120324-r14064"
+CONFIG_KERNELVERSION="devel-20120730-r14886"
 CONFIG_MODULES=y
 CONFIG_FLAVOUR_base=y
 # CONFIG_FLAVOUR_geexbox is not set
@@ -33,6 +33,7 @@ CONFIG_TARGET_CPU_generic=y
 # CONFIG_TARGET_CPU_core2 is not set
 # CONFIG_TARGET_CPU_corei7 is not set
 # CONFIG_TARGET_CPU_corei7-avx is not set
+# CONFIG_TARGET_CPU_core-avx-i is not set
 # CONFIG_TARGET_CPU_atom is not set
 # CONFIG_TARGET_CPU_k8 is not set
 # CONFIG_TARGET_CPU_opteron is not set
@@ -44,6 +45,9 @@ CONFIG_TARGET_CPU_generic=y
 # CONFIG_TARGET_CPU_amdfam10 is not set
 # CONFIG_TARGET_CPU_barcelona is not set
 # CONFIG_TARGET_CPU_btver1 is not set
+# CONFIG_TARGET_CPU_bdver1 is not set
+# CONFIG_TARGET_CPU_bdver2 is not set
+# CONFIG_TARGET_CPU_amdfusion is not set
 CONFIG_OPT_TARGET_CPU="generic"
 # CONFIG_FPU_OPTIMIZATIONS_387 is not set
 CONFIG_FPU_OPTIMIZATIONS_SSE=y
@@ -71,6 +75,7 @@ CONFIG_OPTIMIZATIONS_SPEED=y
 CONFIG_COMPRESSION_XZ=y
 # CONFIG_COMPRESSION_GZIP is not set
 # CONFIG_OPT_DYNAMIC_SYSROOT is not set
+# CONFIG_OPT_EATMYDATA is not set
 CONFIG_OPT_VERBOSE=y
 CONFIG_OPT_CONCURRENCY_MAKE_LEVEL=3
 # CONFIG_OPT_MIRROR is not set
@@ -187,8 +192,9 @@ CONFIG_USE_devtools=y
 # Network
 #
 CONFIG_USE_network=y
-CONFIG_NM_CONNMAN=y
-# CONFIG_NM_NONE is not set
+CONFIG_NB_CONNMAN=y
+# CONFIG_NB_UDHCPC is not set
+# CONFIG_NB_NONE is not set
 # CONFIG_USE_bluetooth is not set
 CONFIG_USE_wifi=y
 CONFIG_START_SERVICES=y
@@ -235,7 +241,6 @@ CONFIG_PKG_opkg=y
 CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_crystalhd is not set
 # CONFIG_PKG_cwiid is not set
-# CONFIG_PKG_dvb-usb-rtl2832u is not set
 # CONFIG_PKG_eventlircd is not set
 # CONFIG_PKG_lirc is not set
 # CONFIG_PKG_ndiswrapper is not set
@@ -264,6 +269,7 @@ CONFIG_PKG_parted=y
 #
 # firmware
 #
+# CONFIG_PKG_firmware-arm-raspberrypi is not set
 # CONFIG_PKG_firmware-bluetooth-bluez is not set
 # CONFIG_PKG_firmware-dvb-af9015 is not set
 # CONFIG_PKG_firmware-dvb-avertv-a800 is not set
@@ -323,6 +329,7 @@ CONFIG_PKG_parted=y
 # CONFIG_PKG_firmware-wifi-wilink12xx is not set
 # CONFIG_PKG_firmware-wifi-zd1201 is not set
 # CONFIG_PKG_firmware-wifi-zd1211-ar5007 is not set
+# CONFIG_PKG_sysbios-rpmsg is not set
 
 #
 # fonts
@@ -404,6 +411,7 @@ CONFIG_PKG_freetype=y
 # CONFIG_PKG_gdk-pixbuf is not set
 CONFIG_PKG_gettext=y
 # CONFIG_PKG_glibmm is not set
+CONFIG_PKG_gmp=y
 CONFIG_PKG_gnutls=y
 # CONFIG_PKG_grilo is not set
 # CONFIG_PKG_grilo-plugins is not set
@@ -415,13 +423,13 @@ CONFIG_PKG_gnutls=y
 # CONFIG_PKG_gupnp-igd is not set
 # CONFIG_PKG_hal is not set
 # CONFIG_PKG_hicolor-icon-theme is not set
+# CONFIG_PKG_htop is not set
 # CONFIG_PKG_i18n is not set
 # CONFIG_PKG_icu4c is not set
 # CONFIG_PKG_imlib2 is not set
 # CONFIG_PKG_imx5-lib is not set
 # CONFIG_PKG_imx6-lib is not set
 # CONFIG_PKG_jasper is not set
-# CONFIG_PKG_jpeg is not set
 # CONFIG_PKG_json is not set
 # CONFIG_PKG_json-glib is not set
 # CONFIG_PKG_kissfft is not set
@@ -433,6 +441,7 @@ CONFIG_PKG_gnutls=y
 # CONFIG_PKG_libass is not set
 # CONFIG_PKG_libatasmart is not set
 # CONFIG_PKG_libavc1394 is not set
+# CONFIG_PKG_libbmm is not set
 CONFIG_PKG_libcap=y
 # CONFIG_PKG_libcdaudio is not set
 # CONFIG_PKG_libcddb is not set
@@ -440,7 +449,6 @@ CONFIG_PKG_libcap=y
 # CONFIG_PKG_libcec is not set
 # CONFIG_PKG_libcroco is not set
 # CONFIG_PKG_libdaemon is not set
-# CONFIG_PKG_libdce is not set
 # CONFIG_PKG_libdri2 is not set
 # CONFIG_PKG_libdvbpsi is not set
 # CONFIG_PKG_libdvdnav is not set
@@ -453,10 +461,12 @@ CONFIG_PKG_libffi=y
 # CONFIG_PKG_libftdi is not set
 # CONFIG_PKG_libg7221 is not set
 CONFIG_PKG_libgcrypt=y
+# CONFIG_PKG_libgles-gc is not set
 CONFIG_PKG_libgpg-error=y
 # CONFIG_PKG_libiconv is not set
 # CONFIG_PKG_libid3tag is not set
 # CONFIG_PKG_libiec61883 is not set
+# CONFIG_PKG_libjpeg-turbo is not set
 # CONFIG_PKG_liblockdev is not set
 # CONFIG_PKG_libmad is not set
 # CONFIG_PKG_libmicrohttpd is not set
@@ -507,12 +517,15 @@ CONFIG_PKG_libusb-compat=y
 # CONFIG_PKG_libxslt is not set
 # CONFIG_PKG_libyaml is not set
 CONFIG_PKG_lzo=y
+# CONFIG_PKG_marvell-ipp is not set
 # CONFIG_PKG_mediastreamer is not set
 # CONFIG_PKG_mesa is not set
+# CONFIG_PKG_mtdev is not set
 # CONFIG_PKG_mx is not set
 CONFIG_PKG_ncurses=y
 # CONFIG_OPT_ncurses_terminfo is not set
 # CONFIG_PKG_ncursesw is not set
+CONFIG_PKG_nettle=y
 # CONFIG_PKG_openssl is not set
 # CONFIG_PKG_orc is not set
 # CONFIG_PKG_ortp is not set
@@ -545,10 +558,12 @@ CONFIG_PKG_talloc=y
 # CONFIG_PKG_telepathy-sofiasip is not set
 # CONFIG_PKG_tiff is not set
 # CONFIG_PKG_tiler is not set
+# CONFIG_PKG_tinyxml is not set
 # CONFIG_PKG_tntnet is not set
 # CONFIG_PKG_tslib is not set
 # CONFIG_PKG_twolame is not set
 # CONFIG_PKG_v4l-utils is not set
+# CONFIG_PKG_vmeta is not set
 # CONFIG_PKG_wavpack is not set
 # CONFIG_PKG_yajl is not set
 CONFIG_PKG_zlib=y
@@ -562,14 +577,21 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_ethtool is not set
 # CONFIG_PKG_glmark2 is not set
 # CONFIG_PKG_iioutils is not set
+# CONFIG_PKG_libxkbcommon is not set
 # CONFIG_PKG_linphone is not set
 # CONFIG_PKG_madplay is not set
+# CONFIG_PKG_maliit-framework is not set
+# CONFIG_PKG_maliit-plugins is not set
+# CONFIG_PKG_nbench is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
 # CONFIG_PKG_pvr is not set
 # CONFIG_PKG_rsync is not set
+# CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
+# CONFIG_PKG_wayland is not set
 # CONFIG_PKG_webrtc-audio-processing is not set
+# CONFIG_PKG_weston is not set
 
 #
 # multimedia
@@ -592,10 +614,12 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_gst-plugins-base is not set
 # CONFIG_PKG_gst-plugins-gl is not set
 # CONFIG_PKG_gst-plugins-good is not set
+# CONFIG_PKG_gst-plugins-ugly is not set
 # CONFIG_PKG_gst-vaapi is not set
 # CONFIG_PKG_gstreamer is not set
 # CONFIG_PKG_libav is not set
 # CONFIG_PKG_libbluray is not set
+# CONFIG_PKG_libdce is not set
 # CONFIG_PKG_libdvdcss is not set
 # CONFIG_PKG_libomxil-bellagio is not set
 # CONFIG_PKG_libplayer is not set
@@ -650,6 +674,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_vdr-skinelchi is not set
 # CONFIG_PKG_vdr-skinenigmang is not set
 # CONFIG_PKG_vdr-skinsoppalusikka is not set
+# CONFIG_PKG_vdr-softhddevice is not set
 # CONFIG_PKG_vdr-solitaire is not set
 # CONFIG_PKG_vdr-spider is not set
 # CONFIG_PKG_vdr-streamdev-client is not set
@@ -690,11 +715,13 @@ CONFIG_PKG_iptables=y
 # CONFIG_PKG_iw is not set
 # CONFIG_PKG_mysql-client is not set
 # CONFIG_PKG_mysql-server is not set
+CONFIG_PKG_network-backend=y
 # CONFIG_PKG_olsrd is not set
 # CONFIG_PKG_openvpn is not set
 CONFIG_PKG_samba-client=y
 # CONFIG_PKG_samba-server is not set
 # CONFIG_PKG_tcpdump is not set
+# CONFIG_PKG_udhcpc is not set
 CONFIG_PKG_wireless-tools=y
 CONFIG_OPT_wirelesstools_devtools=y
 CONFIG_PKG_wpa-supplicant=y
@@ -879,8 +906,7 @@ CONFIG_OPT_linux_wifi=y
 # CONFIG_OPT_linux_unichrome is not set
 # CONFIG_OPT_linux_vmwgfx is not set
 # CONFIG_PKG_llvm is not set
-# CONFIG_PKG_module-init-tools is not set
-# CONFIG_PKG_pciutils is not set
+CONFIG_PKG_pciutils=y
 # CONFIG_PKG_polkit is not set
 # CONFIG_PKG_ralink-8070-3070-3370-5372-usb is not set
 # CONFIG_PKG_syslinux is not set
@@ -892,7 +918,6 @@ CONFIG_PKG_toolchain=y
 # CONFIG_PKG_uclibc is not set
 # CONFIG_PKG_uclibc-gdb is not set
 # CONFIG_PKG_uclibc-network is not set
-CONFIG_PKG_udev=y
 # CONFIG_PKG_udisks is not set
 CONFIG_PKG_util-linux-ng=y
 
@@ -917,6 +942,7 @@ CONFIG_PKG_dialog=y
 # CONFIG_PKG_linux-perftools is not set
 # CONFIG_PKG_lsof is not set
 # CONFIG_PKG_nano is not set
+# CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
 # CONFIG_PKG_rtmpdump is not set
 # CONFIG_PKG_screen is not set
@@ -973,7 +999,10 @@ CONFIG_OPT_usbutils_devtools=y
 # CONFIG_PKG_pixman is not set
 # CONFIG_PKG_rxvt is not set
 # CONFIG_PKG_setxkbmap is not set
-# CONFIG_PKG_xcb-utils is not set
+# CONFIG_PKG_xcb-util is not set
+# CONFIG_PKG_xcb-util-image is not set
+# CONFIG_PKG_xcb-util-keysyms is not set
+# CONFIG_PKG_xcb-util-wm is not set
 # CONFIG_PKG_xcompmgr is not set
 # CONFIG_PKG_xdialog is not set
 # CONFIG_PKG_xdpyinfo is not set
@@ -981,6 +1010,7 @@ CONFIG_OPT_usbutils_devtools=y
 # CONFIG_PKG_xf86-input-synaptics is not set
 # CONFIG_PKG_xf86-video-ati is not set
 # CONFIG_PKG_xf86-video-displaylink is not set
+# CONFIG_PKG_xf86-video-dove is not set
 # CONFIG_PKG_xf86-video-fbdev is not set
 # CONFIG_PKG_xf86-video-fglrx is not set
 # CONFIG_PKG_xf86-video-glint is not set
@@ -1021,3 +1051,4 @@ CONFIG_OPT_TOOLCHAIN_TYPE="openbricks"
 CONFIG_OPT_COMPRESSION_METHOD="xz"
 CONFIG_OPT_TARGET_LIBC="eglibc"
 CONFIG_OPT_KEYMAP="qwerty"
+CONFIG_OPT_NETWORK_BACKEND="connman"
