--- a/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
+++ b/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120710-r14678"
+CONFIG_KERNELVERSION="devel-20120730-r14886"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -279,6 +279,7 @@ CONFIG_PKG_ntfs-3g=y
 #
 # CONFIG_PKG_firmware-arm-imx5 is not set
 # CONFIG_PKG_firmware-arm-imx6 is not set
+# CONFIG_PKG_firmware-arm-raspberrypi is not set
 CONFIG_PKG_firmware-arm-syslink-ipc=y
 CONFIG_OPT_firmwarearmsyslinkipc_devtools=y
 CONFIG_PKG_firmware-arm-syslink-mm=y
@@ -381,7 +382,7 @@ CONFIG_PKG_SDL-mixer=y
 # CONFIG_PKG_SDL-net is not set
 # CONFIG_PKG_SDL-ttf is not set
 # CONFIG_PKG_WebKitSDL is not set
-# CONFIG_PKG_a52dec is not set
+CONFIG_PKG_a52dec=y
 CONFIG_PKG_acl=y
 # CONFIG_PKG_afpfs-ng is not set
 # CONFIG_PKG_atk is not set
@@ -455,7 +456,6 @@ CONFIG_PKG_i18n=y
 # CONFIG_PKG_imx6-graphics is not set
 # CONFIG_PKG_imx6-lib is not set
 CONFIG_PKG_jasper=y
-CONFIG_PKG_jpeg=y
 # CONFIG_PKG_json is not set
 # CONFIG_PKG_json-glib is not set
 # CONFIG_PKG_kissfft is not set
@@ -478,8 +478,9 @@ CONFIG_PKG_libcec=y
 CONFIG_PKG_libdaemon=y
 CONFIG_PKG_libdri2=y
 # CONFIG_PKG_libdvbpsi is not set
-# CONFIG_PKG_libdvdnav is not set
-# CONFIG_PKG_libdvdread is not set
+CONFIG_PKG_libdvdnav=y
+CONFIG_PKG_libdvdread=y
+CONFIG_OPT_libdvdread_dvdcss=y
 # CONFIG_PKG_libeXosip2 is not set
 # CONFIG_PKG_libev is not set
 CONFIG_PKG_libevent=y
@@ -493,6 +494,7 @@ CONFIG_PKG_libgpg-error=y
 # CONFIG_PKG_libiconv is not set
 # CONFIG_PKG_libid3tag is not set
 # CONFIG_PKG_libiec61883 is not set
+CONFIG_PKG_libjpeg-turbo=y
 CONFIG_PKG_liblockdev=y
 CONFIG_PKG_libmad=y
 CONFIG_PKG_libmicrohttpd=y
@@ -534,7 +536,6 @@ CONFIG_PKG_libssh=y
 # CONFIG_PKG_libsvg is not set
 # CONFIG_PKG_libtelepathy is not set
 # CONFIG_PKG_libtheora is not set
-# CONFIG_PKG_libtirpc is not set
 CONFIG_PKG_libungif=y
 CONFIG_PKG_libusb=y
 CONFIG_PKG_libusb-compat=y
@@ -677,7 +678,7 @@ CONFIG_PKG_libav=y
 CONFIG_PKG_libbluray=y
 CONFIG_OPT_libbluray_aacs=y
 CONFIG_PKG_libdce=y
-# CONFIG_PKG_libdvdcss is not set
+CONFIG_PKG_libdvdcss=y
 # CONFIG_PKG_libomxil-bellagio is not set
 # CONFIG_PKG_libplayer is not set
 # CONFIG_PKG_libsvdrp is not set
@@ -779,6 +780,9 @@ CONFIG_OPT_xbmc_libnfs=y
 # CONFIG_OPT_xbmc_screensavers is not set
 # CONFIG_OPT_xbmc_dove is not set
 CONFIG_OPT_xbmc_gstreamer=y
+CONFIG_OPT_xbmc_xorg=y
+CONFIG_OPT_xbmc_sdl=y
+CONFIG_OPT_xbmc_alsa=y
 # CONFIG_PKG_xbmc-addon-vdr is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
