--- a/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120324-r14064"
+CONFIG_KERNELVERSION="devel-20120730-r14886"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -34,6 +34,7 @@ CONFIG_OPT_TARGET_ARCH="arm"
 # CONFIG_TARGET_SUBARCH_armv6 is not set
 CONFIG_TARGET_SUBARCH_armv7=y
 CONFIG_OPT_TARGET_SUBARCH="armv7"
+# CONFIG_TARGET_PLATFORM_arm_armada5xx is not set
 # CONFIG_TARGET_PLATFORM_arm_imx5x is not set
 # CONFIG_TARGET_PLATFORM_arm_imx6 is not set
 # CONFIG_TARGET_PLATFORM_arm_omap3 is not set
@@ -58,8 +59,10 @@ CONFIG_TARGET_CPU_cortex-a9=y
 CONFIG_OPT_TARGET_CPU="cortex-a9"
 # CONFIG_FPU_OPTIMIZATIONS_VFP2 is not set
 CONFIG_FPU_OPTIMIZATIONS_VFP3=y
+# CONFIG_FPU_OPTIMIZATIONS_VFP3D16 is not set
 # CONFIG_FPU_OPTIMIZATIONS_NEON is not set
 # CONFIG_FPU_OPTIMIZATIONS_NONE is not set
+# CONFIG_OPT_ARM_HARDFLOAT_ABI is not set
 # CONFIG_OPT_THUMB is not set
 
 #
@@ -85,6 +88,7 @@ CONFIG_OPTIMIZATIONS_SPEED=y
 # CONFIG_COMPRESSION_XZ is not set
 CONFIG_COMPRESSION_GZIP=y
 # CONFIG_OPT_DYNAMIC_SYSROOT is not set
+# CONFIG_OPT_EATMYDATA is not set
 CONFIG_OPT_VERBOSE=y
 CONFIG_OPT_CONCURRENCY_MAKE_LEVEL=9
 # CONFIG_OPT_MIRROR is not set
@@ -135,6 +139,8 @@ CONFIG_USE_xorg=y
 #
 # Graphics Drivers
 #
+# CONFIG_USE_glamo is not set
+# CONFIG_USE_omap is not set
 
 #
 # Hardware Accelerators
@@ -194,8 +200,9 @@ CONFIG_USE_devtools=y
 # Network
 #
 CONFIG_USE_network=y
-CONFIG_NM_CONNMAN=y
-# CONFIG_NM_NONE is not set
+CONFIG_NB_CONNMAN=y
+# CONFIG_NB_UDHCPC is not set
+# CONFIG_NB_NONE is not set
 # CONFIG_USE_bluetooth is not set
 CONFIG_USE_wifi=y
 CONFIG_START_SERVICES=y
@@ -237,7 +244,6 @@ CONFIG_PKG_opkg=y
 # CONFIG_PKG_ar6k is not set
 CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_cwiid is not set
-# CONFIG_PKG_dvb-usb-rtl2832u is not set
 # CONFIG_PKG_eventlircd is not set
 # CONFIG_PKG_lirc is not set
 # CONFIG_PKG_s2-liplianin is not set
@@ -268,6 +274,7 @@ CONFIG_PKG_ntfs-3g=y
 #
 # CONFIG_PKG_firmware-arm-imx5 is not set
 # CONFIG_PKG_firmware-arm-imx6 is not set
+# CONFIG_PKG_firmware-arm-raspberrypi is not set
 # CONFIG_PKG_firmware-arm-syslink-ipc is not set
 # CONFIG_PKG_firmware-arm-syslink-mm is not set
 # CONFIG_PKG_firmware-arm-wl1271 is not set
@@ -330,6 +337,7 @@ CONFIG_PKG_firmware-graphics-nouveau=y
 # CONFIG_PKG_firmware-wifi-wilink12xx is not set
 # CONFIG_PKG_firmware-wifi-zd1201 is not set
 # CONFIG_PKG_firmware-wifi-zd1211-ar5007 is not set
+# CONFIG_PKG_sysbios-rpmsg is not set
 
 #
 # fonts
@@ -420,6 +428,7 @@ CONFIG_PKG_fribidi=y
 # CONFIG_PKG_gdk-pixbuf is not set
 CONFIG_PKG_gettext=y
 # CONFIG_PKG_glibmm is not set
+CONFIG_PKG_gmp=y
 CONFIG_PKG_gnutls=y
 # CONFIG_PKG_grilo is not set
 # CONFIG_PKG_grilo-plugins is not set
@@ -431,6 +440,7 @@ CONFIG_PKG_gnutls=y
 # CONFIG_PKG_gupnp-igd is not set
 # CONFIG_PKG_hal is not set
 # CONFIG_PKG_hicolor-icon-theme is not set
+# CONFIG_PKG_htop is not set
 CONFIG_PKG_i18n=y
 # CONFIG_OPT_i18n_fonts is not set
 # CONFIG_PKG_icu4c is not set
@@ -440,7 +450,6 @@ CONFIG_PKG_i18n=y
 # CONFIG_PKG_imx6-graphics is not set
 # CONFIG_PKG_imx6-lib is not set
 CONFIG_PKG_jasper=y
-CONFIG_PKG_jpeg=y
 # CONFIG_PKG_json is not set
 # CONFIG_PKG_json-glib is not set
 # CONFIG_PKG_kissfft is not set
@@ -452,6 +461,7 @@ CONFIG_PKG_libaacs=y
 CONFIG_PKG_libass=y
 # CONFIG_PKG_libatasmart is not set
 # CONFIG_PKG_libavc1394 is not set
+# CONFIG_PKG_libbmm is not set
 # CONFIG_PKG_libbridge is not set
 CONFIG_PKG_libcap=y
 # CONFIG_PKG_libcdaudio is not set
@@ -460,7 +470,6 @@ CONFIG_PKG_libcdio=y
 # CONFIG_PKG_libcec is not set
 # CONFIG_PKG_libcroco is not set
 CONFIG_PKG_libdaemon=y
-# CONFIG_PKG_libdce is not set
 CONFIG_PKG_libdri2=y
 # CONFIG_PKG_libdvbpsi is not set
 # CONFIG_PKG_libdvdnav is not set
@@ -473,10 +482,12 @@ CONFIG_PKG_libffi=y
 # CONFIG_PKG_libftdi is not set
 # CONFIG_PKG_libg7221 is not set
 CONFIG_PKG_libgcrypt=y
+# CONFIG_PKG_libgles-gc is not set
 CONFIG_PKG_libgpg-error=y
 # CONFIG_PKG_libiconv is not set
 # CONFIG_PKG_libid3tag is not set
 # CONFIG_PKG_libiec61883 is not set
+CONFIG_PKG_libjpeg-turbo=y
 # CONFIG_PKG_liblockdev is not set
 CONFIG_PKG_libmad=y
 CONFIG_PKG_libmicrohttpd=y
@@ -530,6 +541,7 @@ CONFIG_PKG_libxml2=y
 # CONFIG_PKG_libyaml is not set
 # CONFIG_PKG_libz160 is not set
 CONFIG_PKG_lzo=y
+# CONFIG_PKG_marvell-ipp is not set
 # CONFIG_PKG_mediastreamer is not set
 CONFIG_PKG_mesa=y
 # CONFIG_OPT_mesa_gallium3d is not set
@@ -537,9 +549,12 @@ CONFIG_PKG_mesa=y
 # CONFIG_OPT_mesa_opengles is not set
 # CONFIG_OPT_mesa_openvg is not set
 # CONFIG_OPT_mesa_xvmc is not set
+# CONFIG_OPT_mesa_wayland is not set
+# CONFIG_PKG_mtdev is not set
 # CONFIG_PKG_mx is not set
 # CONFIG_PKG_ncurses is not set
 # CONFIG_PKG_ncursesw is not set
+CONFIG_PKG_nettle=y
 CONFIG_PKG_openssl=y
 # CONFIG_PKG_orc is not set
 # CONFIG_PKG_ortp is not set
@@ -576,10 +591,12 @@ CONFIG_PKG_tegra-libs=y
 # CONFIG_PKG_telepathy-sofiasip is not set
 CONFIG_PKG_tiff=y
 # CONFIG_PKG_tiler is not set
+CONFIG_PKG_tinyxml=y
 # CONFIG_PKG_tntnet is not set
 # CONFIG_PKG_tslib is not set
 # CONFIG_PKG_twolame is not set
 # CONFIG_PKG_v4l-utils is not set
+# CONFIG_PKG_vmeta is not set
 CONFIG_PKG_wavpack=y
 CONFIG_PKG_yajl=y
 CONFIG_PKG_zlib=y
@@ -589,19 +606,27 @@ CONFIG_PKG_zlib=y
 # misc
 #
 # CONFIG_PKG_baresip is not set
+# CONFIG_PKG_cpuburn is not set
 # CONFIG_PKG_elfutils is not set
 # CONFIG_PKG_ethtool is not set
 # CONFIG_PKG_glmark2 is not set
 # CONFIG_PKG_hdmiservice is not set
 # CONFIG_PKG_iioutils is not set
+# CONFIG_PKG_libxkbcommon is not set
 # CONFIG_PKG_linphone is not set
 # CONFIG_PKG_madplay is not set
+# CONFIG_PKG_maliit-framework is not set
+# CONFIG_PKG_maliit-plugins is not set
+# CONFIG_PKG_nbench is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
 # CONFIG_PKG_pvr is not set
 # CONFIG_PKG_rsync is not set
+# CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
+# CONFIG_PKG_wayland is not set
 # CONFIG_PKG_webrtc-audio-processing is not set
+# CONFIG_PKG_weston is not set
 
 #
 # multimedia
@@ -625,11 +650,13 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_gst-plugins-base is not set
 # CONFIG_PKG_gst-plugins-gl is not set
 # CONFIG_PKG_gst-plugins-good is not set
+# CONFIG_PKG_gst-plugins-ugly is not set
 # CONFIG_PKG_gst-vaapi is not set
 # CONFIG_PKG_gstreamer is not set
 # CONFIG_PKG_libav is not set
 CONFIG_PKG_libbluray=y
 CONFIG_OPT_libbluray_aacs=y
+# CONFIG_PKG_libdce is not set
 # CONFIG_PKG_libdvdcss is not set
 # CONFIG_PKG_libomxil-bellagio is not set
 # CONFIG_PKG_libplayer is not set
@@ -691,6 +718,7 @@ CONFIG_OPT_tvheadend_zeroconf=y
 # CONFIG_PKG_vdr-skinelchi is not set
 # CONFIG_PKG_vdr-skinenigmang is not set
 # CONFIG_PKG_vdr-skinsoppalusikka is not set
+# CONFIG_PKG_vdr-softhddevice is not set
 # CONFIG_PKG_vdr-solitaire is not set
 # CONFIG_PKG_vdr-spider is not set
 # CONFIG_PKG_vdr-streamdev-client is not set
@@ -720,6 +748,7 @@ CONFIG_OPT_xbmc_bluray=y
 CONFIG_OPT_xbmc_rtmp=y
 CONFIG_OPT_xbmc_nonfree=y
 # CONFIG_OPT_xbmc_externalffmpeg is not set
+# CONFIG_OPT_xbmc_externalffmpeglibav is not set
 # CONFIG_OPT_xbmc_pvr is not set
 CONFIG_OPT_xbmc_addons=y
 # CONFIG_OPT_xbmc_libcec is not set
@@ -727,7 +756,11 @@ CONFIG_OPT_xbmc_addons=y
 # CONFIG_OPT_xbmc_afpclient is not set
 # CONFIG_OPT_xbmc_airtunes is not set
 # CONFIG_OPT_xbmc_screensavers is not set
-# CONFIG_OPT_xbmc_gst is not set
+# CONFIG_OPT_xbmc_dove is not set
+# CONFIG_OPT_xbmc_gstreamer is not set
+CONFIG_OPT_xbmc_xorg=y
+CONFIG_OPT_xbmc_sdl=y
+CONFIG_OPT_xbmc_alsa=y
 # CONFIG_PKG_xbmc-addon-vdr is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
@@ -753,11 +786,13 @@ CONFIG_PKG_iptables=y
 # CONFIG_PKG_iw is not set
 # CONFIG_PKG_mysql-client is not set
 # CONFIG_PKG_mysql-server is not set
+CONFIG_PKG_network-backend=y
 # CONFIG_PKG_olsrd is not set
 # CONFIG_PKG_openvpn is not set
 CONFIG_PKG_samba-client=y
 # CONFIG_PKG_samba-server is not set
 # CONFIG_PKG_tcpdump is not set
+# CONFIG_PKG_udhcpc is not set
 CONFIG_PKG_wireless-tools=y
 CONFIG_OPT_wirelesstools_devtools=y
 CONFIG_PKG_wpa-supplicant=y
@@ -934,8 +969,7 @@ CONFIG_OPT_linux_usbnet=y
 # CONFIG_OPT_linux_v4l is not set
 CONFIG_OPT_linux_wifi=y
 # CONFIG_PKG_llvm is not set
-# CONFIG_PKG_module-init-tools is not set
-# CONFIG_PKG_pciutils is not set
+CONFIG_PKG_pciutils=y
 # CONFIG_PKG_polkit is not set
 # CONFIG_PKG_ralink-8070-3070-3370-5372-usb is not set
 # CONFIG_PKG_snowball-init is not set
@@ -947,7 +981,6 @@ CONFIG_PKG_toolchain=y
 # CONFIG_PKG_uclibc is not set
 # CONFIG_PKG_uclibc-gdb is not set
 # CONFIG_PKG_uclibc-network is not set
-CONFIG_PKG_udev=y
 # CONFIG_PKG_udisks is not set
 CONFIG_PKG_util-linux-ng=y
 
@@ -971,6 +1004,7 @@ CONFIG_PKG_util-linux-ng=y
 # CONFIG_PKG_linux-perftools is not set
 # CONFIG_PKG_lsof is not set
 # CONFIG_PKG_nano is not set
+# CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
 CONFIG_PKG_rtmpdump=y
 # CONFIG_PKG_screen is not set
@@ -1030,7 +1064,10 @@ CONFIG_PKG_mesa-demos=y
 CONFIG_PKG_pixman=y
 # CONFIG_PKG_rxvt is not set
 CONFIG_PKG_setxkbmap=y
-# CONFIG_PKG_xcb-utils is not set
+# CONFIG_PKG_xcb-util is not set
+# CONFIG_PKG_xcb-util-image is not set
+# CONFIG_PKG_xcb-util-keysyms is not set
+# CONFIG_PKG_xcb-util-wm is not set
 # CONFIG_PKG_xcompmgr is not set
 # CONFIG_PKG_xdialog is not set
 CONFIG_PKG_xdpyinfo=y
@@ -1038,6 +1075,7 @@ CONFIG_PKG_xf86-input-evdev=y
 # CONFIG_PKG_xf86-input-synaptics is not set
 # CONFIG_PKG_xf86-video-ati is not set
 # CONFIG_PKG_xf86-video-displaylink is not set
+# CONFIG_PKG_xf86-video-dove is not set
 CONFIG_PKG_xf86-video-fbdev=y
 # CONFIG_PKG_xf86-video-glamo is not set
 # CONFIG_PKG_xf86-video-imx5 is not set
@@ -1067,3 +1105,4 @@ CONFIG_OPT_TARGET_LIBC="eglibc"
 CONFIG_OPT_KEYMAP="qwerty"
 CONFIG_OPT_EGL_PROVIDER="tegra"
 CONFIG_OPT_GLES_PROVIDER="tegra"
+CONFIG_OPT_NETWORK_BACKEND="connman"
