--- a/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120715-r14722"
+CONFIG_KERNELVERSION="devel-20120730-r14886"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -239,7 +239,7 @@ CONFIG_OPT_SAMBA=y
 # CONFIG_PKG_dietsplash is not set
 CONFIG_PKG_efibootmgr=y
 # CONFIG_PKG_grub is not set
-# CONFIG_PKG_hdparm is not set
+CONFIG_PKG_hdparm=y
 CONFIG_PKG_installator=y
 CONFIG_OPT_INSTALLATOR=y
 # CONFIG_PKG_ndiswrapper-tool is not set
@@ -287,6 +287,7 @@ CONFIG_PKG_parted=y
 #
 # firmware
 #
+# CONFIG_PKG_firmware-arm-raspberrypi is not set
 CONFIG_PKG_firmware-bluetooth-bluez=y
 CONFIG_PKG_firmware-dvb-af9015=y
 CONFIG_PKG_firmware-dvb-avertv-a800=y
@@ -456,7 +457,6 @@ CONFIG_PKG_i18n=y
 # CONFIG_PKG_imx5-lib is not set
 # CONFIG_PKG_imx6-lib is not set
 CONFIG_PKG_jasper=y
-CONFIG_PKG_jpeg=y
 # CONFIG_PKG_json is not set
 # CONFIG_PKG_json-glib is not set
 # CONFIG_PKG_kissfft is not set
@@ -468,6 +468,7 @@ CONFIG_PKG_libaacs=y
 CONFIG_PKG_libass=y
 CONFIG_PKG_libatasmart=y
 # CONFIG_PKG_libavc1394 is not set
+# CONFIG_PKG_libbmm is not set
 CONFIG_PKG_libcap=y
 # CONFIG_PKG_libcdaudio is not set
 # CONFIG_PKG_libcddb is not set
@@ -492,6 +493,7 @@ CONFIG_PKG_libgpg-error=y
 # CONFIG_PKG_libiconv is not set
 # CONFIG_PKG_libid3tag is not set
 # CONFIG_PKG_libiec61883 is not set
+CONFIG_PKG_libjpeg-turbo=y
 CONFIG_PKG_liblockdev=y
 CONFIG_PKG_libmad=y
 CONFIG_PKG_libmicrohttpd=y
@@ -544,6 +546,7 @@ CONFIG_PKG_libxml2=y
 # CONFIG_PKG_libxslt is not set
 # CONFIG_PKG_libyaml is not set
 CONFIG_PKG_lzo=y
+# CONFIG_PKG_marvell-ipp is not set
 # CONFIG_PKG_mediastreamer is not set
 CONFIG_PKG_mesa=y
 CONFIG_OPT_mesa_gallium3d=y
@@ -556,6 +559,7 @@ CONFIG_OPT_mesa_nouveau=y
 # CONFIG_OPT_mesa_vmwgfx is not set
 CONFIG_OPT_mesa_vdpau=y
 CONFIG_OPT_mesa_xvmc=y
+# CONFIG_OPT_mesa_wayland is not set
 # CONFIG_PKG_mtdev is not set
 # CONFIG_PKG_mx is not set
 CONFIG_PKG_ncurses=y
@@ -615,18 +619,23 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_ethtool is not set
 # CONFIG_PKG_glmark2 is not set
 # CONFIG_PKG_iioutils is not set
+# CONFIG_PKG_libxkbcommon is not set
 # CONFIG_PKG_linphone is not set
 # CONFIG_PKG_madplay is not set
 # CONFIG_PKG_maliit-framework is not set
 # CONFIG_PKG_maliit-plugins is not set
+# CONFIG_PKG_nbench is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
 CONFIG_PKG_pvr=y
 CONFIG_OPT_pvr_tvheadend=y
 CONFIG_OPT_pvr_vdr=y
 # CONFIG_PKG_rsync is not set
+# CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
+# CONFIG_PKG_wayland is not set
 # CONFIG_PKG_webrtc-audio-processing is not set
+# CONFIG_PKG_weston is not set
 
 #
 # multimedia
@@ -753,6 +762,9 @@ CONFIG_OPT_xbmc_airtunes=y
 CONFIG_OPT_xbmc_screensavers=y
 # CONFIG_OPT_xbmc_dove is not set
 # CONFIG_OPT_xbmc_gstreamer is not set
+CONFIG_OPT_xbmc_xorg=y
+CONFIG_OPT_xbmc_sdl=y
+CONFIG_OPT_xbmc_alsa=y
 CONFIG_PKG_xbmc-addon-vdr=y
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
