--- a/config/defconfigs/base-omap4-pandaboard.conf
+++ b/config/defconfigs/base-omap4-pandaboard.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120324-r14064"
+CONFIG_KERNELVERSION="devel-20120730-r14886"
 CONFIG_MODULES=y
 CONFIG_FLAVOUR_base=y
 # CONFIG_FLAVOUR_geexbox is not set
@@ -25,6 +25,7 @@ CONFIG_OPT_TARGET_ARCH="arm"
 # CONFIG_TARGET_SUBARCH_armv6 is not set
 CONFIG_TARGET_SUBARCH_armv7=y
 CONFIG_OPT_TARGET_SUBARCH="armv7"
+# CONFIG_TARGET_PLATFORM_arm_armada5xx is not set
 # CONFIG_TARGET_PLATFORM_arm_imx5x is not set
 # CONFIG_TARGET_PLATFORM_arm_imx6 is not set
 # CONFIG_TARGET_PLATFORM_arm_omap3 is not set
@@ -51,8 +52,10 @@ CONFIG_OMAP_DISPLAY_HDMI=y
 # CONFIG_OMAP_DISPLAY_DPI is not set
 # CONFIG_FPU_OPTIMIZATIONS_VFP2 is not set
 # CONFIG_FPU_OPTIMIZATIONS_VFP3 is not set
+# CONFIG_FPU_OPTIMIZATIONS_VFP3D16 is not set
 CONFIG_FPU_OPTIMIZATIONS_NEON=y
 # CONFIG_FPU_OPTIMIZATIONS_NONE is not set
+# CONFIG_OPT_ARM_HARDFLOAT_ABI is not set
 # CONFIG_OPT_THUMB is not set
 
 #
@@ -78,6 +81,7 @@ CONFIG_OPTIMIZATIONS_SPEED=y
 # CONFIG_COMPRESSION_XZ is not set
 CONFIG_COMPRESSION_GZIP=y
 # CONFIG_OPT_DYNAMIC_SYSROOT is not set
+# CONFIG_OPT_EATMYDATA is not set
 CONFIG_OPT_VERBOSE=y
 CONFIG_OPT_CONCURRENCY_MAKE_LEVEL=3
 # CONFIG_OPT_MIRROR is not set
@@ -125,6 +129,8 @@ CONFIG_USE_fb=y
 #
 # Graphics Drivers
 #
+# CONFIG_USE_glamo is not set
+# CONFIG_USE_omap is not set
 
 #
 # Hardware Accelerators
@@ -181,8 +187,9 @@ CONFIG_USE_fb=y
 # Network
 #
 CONFIG_USE_network=y
-CONFIG_NM_CONNMAN=y
-# CONFIG_NM_NONE is not set
+CONFIG_NB_CONNMAN=y
+# CONFIG_NB_UDHCPC is not set
+# CONFIG_NB_NONE is not set
 # CONFIG_USE_bluetooth is not set
 # CONFIG_USE_wifi is not set
 CONFIG_START_SERVICES=y
@@ -222,7 +229,6 @@ CONFIG_OPT_TELNET_SERVER=y
 # CONFIG_PKG_ar6k is not set
 # CONFIG_PKG_cryptodev is not set
 # CONFIG_PKG_cwiid is not set
-# CONFIG_PKG_dvb-usb-rtl2832u is not set
 # CONFIG_PKG_eventlircd is not set
 # CONFIG_PKG_lirc is not set
 # CONFIG_PKG_s2-liplianin is not set
@@ -250,10 +256,12 @@ CONFIG_OPT_TELNET_SERVER=y
 #
 # firmware
 #
+# CONFIG_PKG_firmware-arm-raspberrypi is not set
 # CONFIG_PKG_firmware-dvb-dvbsky-S9xx is not set
 # CONFIG_PKG_firmware-dvb-tevii is not set
 # CONFIG_PKG_firmware-graphics-nouveau is not set
 # CONFIG_PKG_firmware-ux500 is not set
+# CONFIG_PKG_sysbios-rpmsg is not set
 
 #
 # fonts
@@ -335,6 +343,7 @@ CONFIG_PKG_expat=y
 # CONFIG_PKG_gdk-pixbuf is not set
 CONFIG_PKG_gettext=y
 # CONFIG_PKG_glibmm is not set
+# CONFIG_PKG_gmp is not set
 # CONFIG_PKG_gnutls is not set
 # CONFIG_PKG_grilo is not set
 # CONFIG_PKG_grilo-plugins is not set
@@ -346,13 +355,13 @@ CONFIG_PKG_gettext=y
 # CONFIG_PKG_gupnp-igd is not set
 # CONFIG_PKG_hal is not set
 # CONFIG_PKG_hicolor-icon-theme is not set
+# CONFIG_PKG_htop is not set
 # CONFIG_PKG_i18n is not set
 # CONFIG_PKG_icu4c is not set
 # CONFIG_PKG_imlib2 is not set
 # CONFIG_PKG_imx5-lib is not set
 # CONFIG_PKG_imx6-lib is not set
 # CONFIG_PKG_jasper is not set
-# CONFIG_PKG_jpeg is not set
 # CONFIG_PKG_json is not set
 # CONFIG_PKG_json-glib is not set
 # CONFIG_PKG_kissfft is not set
@@ -364,6 +373,7 @@ CONFIG_PKG_gettext=y
 # CONFIG_PKG_libass is not set
 # CONFIG_PKG_libatasmart is not set
 # CONFIG_PKG_libavc1394 is not set
+# CONFIG_PKG_libbmm is not set
 # CONFIG_PKG_libbridge is not set
 CONFIG_PKG_libcap=y
 # CONFIG_PKG_libcdaudio is not set
@@ -372,7 +382,6 @@ CONFIG_PKG_libcap=y
 # CONFIG_PKG_libcec is not set
 # CONFIG_PKG_libcroco is not set
 # CONFIG_PKG_libdaemon is not set
-# CONFIG_PKG_libdce is not set
 # CONFIG_PKG_libdri2 is not set
 # CONFIG_PKG_libdvbpsi is not set
 # CONFIG_PKG_libdvdnav is not set
@@ -385,10 +394,12 @@ CONFIG_PKG_libffi=y
 # CONFIG_PKG_libftdi is not set
 # CONFIG_PKG_libg7221 is not set
 # CONFIG_PKG_libgcrypt is not set
+# CONFIG_PKG_libgles-gc is not set
 # CONFIG_PKG_libgpg-error is not set
 # CONFIG_PKG_libiconv is not set
 # CONFIG_PKG_libid3tag is not set
 # CONFIG_PKG_libiec61883 is not set
+# CONFIG_PKG_libjpeg-turbo is not set
 # CONFIG_PKG_liblockdev is not set
 # CONFIG_PKG_libmad is not set
 # CONFIG_PKG_libmicrohttpd is not set
@@ -439,11 +450,14 @@ CONFIG_PKG_libusb-compat=y
 # CONFIG_PKG_libxslt is not set
 # CONFIG_PKG_libyaml is not set
 # CONFIG_PKG_lzo is not set
+# CONFIG_PKG_marvell-ipp is not set
 # CONFIG_PKG_mediastreamer is not set
 # CONFIG_PKG_mesa is not set
+# CONFIG_PKG_mtdev is not set
 # CONFIG_PKG_mx is not set
 # CONFIG_PKG_ncurses is not set
 # CONFIG_PKG_ncursesw is not set
+# CONFIG_PKG_nettle is not set
 # CONFIG_PKG_openssl is not set
 # CONFIG_PKG_orc is not set
 # CONFIG_PKG_ortp is not set
@@ -476,10 +490,12 @@ CONFIG_PKG_pciids=y
 # CONFIG_PKG_telepathy-sofiasip is not set
 # CONFIG_PKG_tiff is not set
 # CONFIG_PKG_tiler is not set
+# CONFIG_PKG_tinyxml is not set
 # CONFIG_PKG_tntnet is not set
 # CONFIG_PKG_tslib is not set
 # CONFIG_PKG_twolame is not set
 # CONFIG_PKG_v4l-utils is not set
+# CONFIG_PKG_vmeta is not set
 # CONFIG_PKG_wavpack is not set
 # CONFIG_PKG_yajl is not set
 CONFIG_PKG_zlib=y
@@ -489,19 +505,27 @@ CONFIG_PKG_zlib=y
 # misc
 #
 # CONFIG_PKG_baresip is not set
+# CONFIG_PKG_cpuburn is not set
 # CONFIG_PKG_elfutils is not set
 # CONFIG_PKG_ethtool is not set
 # CONFIG_PKG_glmark2 is not set
 # CONFIG_PKG_hdmiservice is not set
 # CONFIG_PKG_iioutils is not set
+# CONFIG_PKG_libxkbcommon is not set
 # CONFIG_PKG_linphone is not set
 # CONFIG_PKG_madplay is not set
+# CONFIG_PKG_maliit-framework is not set
+# CONFIG_PKG_maliit-plugins is not set
+# CONFIG_PKG_nbench is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
 # CONFIG_PKG_pvr is not set
 # CONFIG_PKG_rsync is not set
+# CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
+# CONFIG_PKG_wayland is not set
 # CONFIG_PKG_webrtc-audio-processing is not set
+# CONFIG_PKG_weston is not set
 
 #
 # multimedia
@@ -525,10 +549,12 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_gst-plugins-base is not set
 # CONFIG_PKG_gst-plugins-gl is not set
 # CONFIG_PKG_gst-plugins-good is not set
+# CONFIG_PKG_gst-plugins-ugly is not set
 # CONFIG_PKG_gst-vaapi is not set
 # CONFIG_PKG_gstreamer is not set
 # CONFIG_PKG_libav is not set
 # CONFIG_PKG_libbluray is not set
+# CONFIG_PKG_libdce is not set
 # CONFIG_PKG_libdvdcss is not set
 # CONFIG_PKG_libomxil-bellagio is not set
 # CONFIG_PKG_libplayer is not set
@@ -588,6 +614,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_vdr-skinelchi is not set
 # CONFIG_PKG_vdr-skinenigmang is not set
 # CONFIG_PKG_vdr-skinsoppalusikka is not set
+# CONFIG_PKG_vdr-softhddevice is not set
 # CONFIG_PKG_vdr-solitaire is not set
 # CONFIG_PKG_vdr-spider is not set
 # CONFIG_PKG_vdr-streamdev-client is not set
@@ -628,11 +655,13 @@ CONFIG_PKG_iptables=y
 # CONFIG_PKG_iw is not set
 # CONFIG_PKG_mysql-client is not set
 # CONFIG_PKG_mysql-server is not set
+CONFIG_PKG_network-backend=y
 # CONFIG_PKG_olsrd is not set
 # CONFIG_PKG_openvpn is not set
 # CONFIG_PKG_samba-client is not set
 # CONFIG_PKG_samba-server is not set
 # CONFIG_PKG_tcpdump is not set
+# CONFIG_PKG_udhcpc is not set
 # CONFIG_PKG_wireless-tools is not set
 # CONFIG_PKG_wpa-supplicant is not set
 
@@ -805,8 +834,7 @@ CONFIG_OPT_linux_usb=y
 # CONFIG_OPT_linux_v4l is not set
 # CONFIG_OPT_linux_wifi is not set
 # CONFIG_PKG_llvm is not set
-# CONFIG_PKG_module-init-tools is not set
-# CONFIG_PKG_pciutils is not set
+CONFIG_PKG_pciutils=y
 # CONFIG_PKG_polkit is not set
 # CONFIG_PKG_ralink-8070-3070-3370-5372-usb is not set
 # CONFIG_PKG_snowball-init is not set
@@ -818,7 +846,6 @@ CONFIG_PKG_toolchain=y
 # CONFIG_PKG_uclibc is not set
 # CONFIG_PKG_uclibc-gdb is not set
 # CONFIG_PKG_uclibc-network is not set
-CONFIG_PKG_udev=y
 # CONFIG_PKG_udisks is not set
 CONFIG_PKG_util-linux-ng=y
 
@@ -841,6 +868,7 @@ CONFIG_PKG_util-linux-ng=y
 # CONFIG_PKG_linux-perftools is not set
 # CONFIG_PKG_lsof is not set
 # CONFIG_PKG_nano is not set
+# CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
 # CONFIG_PKG_rtmpdump is not set
 # CONFIG_PKG_screen is not set
@@ -897,7 +925,10 @@ CONFIG_PKG_usbutils=y
 # CONFIG_PKG_pixman is not set
 # CONFIG_PKG_rxvt is not set
 # CONFIG_PKG_setxkbmap is not set
-# CONFIG_PKG_xcb-utils is not set
+# CONFIG_PKG_xcb-util is not set
+# CONFIG_PKG_xcb-util-image is not set
+# CONFIG_PKG_xcb-util-keysyms is not set
+# CONFIG_PKG_xcb-util-wm is not set
 # CONFIG_PKG_xcompmgr is not set
 # CONFIG_PKG_xdialog is not set
 # CONFIG_PKG_xdpyinfo is not set
@@ -905,6 +936,7 @@ CONFIG_PKG_usbutils=y
 # CONFIG_PKG_xf86-input-synaptics is not set
 # CONFIG_PKG_xf86-video-ati is not set
 # CONFIG_PKG_xf86-video-displaylink is not set
+# CONFIG_PKG_xf86-video-dove is not set
 # CONFIG_PKG_xf86-video-fbdev is not set
 # CONFIG_PKG_xf86-video-glamo is not set
 # CONFIG_PKG_xf86-video-imx5 is not set
@@ -932,3 +964,4 @@ CONFIG_OPT_TOOLCHAIN_TYPE="linaro"
 CONFIG_OPT_COMPRESSION_METHOD="gzip"
 CONFIG_OPT_TARGET_LIBC="eglibc"
 CONFIG_OPT_KEYMAP="qwerty"
+CONFIG_OPT_NETWORK_BACKEND="connman"
