--- a/config/defconfigs/geexbox-freevo-i386-generic.conf
+++ b/config/defconfigs/geexbox-freevo-i386-generic.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120324-r14064"
+CONFIG_KERNELVERSION="devel-20120730-r14886"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -53,6 +53,7 @@ CONFIG_TARGET_CPU_generic=y
 # CONFIG_TARGET_CPU_core2 is not set
 # CONFIG_TARGET_CPU_corei7 is not set
 # CONFIG_TARGET_CPU_corei7-avx is not set
+# CONFIG_TARGET_CPU_core-avx-i is not set
 # CONFIG_TARGET_CPU_atom is not set
 # CONFIG_TARGET_CPU_athlon is not set
 # CONFIG_TARGET_CPU_athlon-tbird is not set
@@ -68,8 +69,11 @@ CONFIG_TARGET_CPU_generic=y
 # CONFIG_TARGET_CPU_athlon64-sse3 is not set
 # CONFIG_TARGET_CPU_amdfam10 is not set
 # CONFIG_TARGET_CPU_barcelona is not set
-# CONFIG_TARGET_CPU_c3-2 is not set
 # CONFIG_TARGET_CPU_btver1 is not set
+# CONFIG_TARGET_CPU_bdver1 is not set
+# CONFIG_TARGET_CPU_bdver2 is not set
+# CONFIG_TARGET_CPU_c3-2 is not set
+# CONFIG_TARGET_CPU_amdfusion is not set
 CONFIG_OPT_TARGET_CPU="generic"
 # CONFIG_FPU_OPTIMIZATIONS_387 is not set
 # CONFIG_FPU_OPTIMIZATIONS_SSE is not set
@@ -97,6 +101,7 @@ CONFIG_OPTIMIZATIONS_SPEED=y
 CONFIG_COMPRESSION_XZ=y
 # CONFIG_COMPRESSION_GZIP is not set
 # CONFIG_OPT_DYNAMIC_SYSROOT is not set
+# CONFIG_OPT_EATMYDATA is not set
 CONFIG_OPT_VERBOSE=y
 CONFIG_OPT_CONCURRENCY_MAKE_LEVEL=3
 # CONFIG_OPT_MIRROR is not set
@@ -218,8 +223,9 @@ CONFIG_USE_devtools=y
 # Network
 #
 CONFIG_USE_network=y
-CONFIG_NM_CONNMAN=y
-# CONFIG_NM_NONE is not set
+CONFIG_NB_CONNMAN=y
+# CONFIG_NB_UDHCPC is not set
+# CONFIG_NB_NONE is not set
 # CONFIG_USE_bluetooth is not set
 CONFIG_USE_wifi=y
 CONFIG_START_SERVICES=y
@@ -267,7 +273,6 @@ CONFIG_PKG_appleir=y
 CONFIG_PKG_cryptodev=y
 CONFIG_PKG_crystalhd=y
 # CONFIG_PKG_cwiid is not set
-# CONFIG_PKG_dvb-usb-rtl2832u is not set
 # CONFIG_PKG_eventlircd is not set
 CONFIG_PKG_lirc=y
 CONFIG_OPT_lirc_devtools=y
@@ -297,6 +302,7 @@ CONFIG_PKG_ntfs-3g=y
 #
 # firmware
 #
+# CONFIG_PKG_firmware-arm-raspberrypi is not set
 # CONFIG_PKG_firmware-bluetooth-bluez is not set
 # CONFIG_PKG_firmware-dvb-af9015 is not set
 # CONFIG_PKG_firmware-dvb-avertv-a800 is not set
@@ -356,6 +362,7 @@ CONFIG_PKG_firmware-wifi-ralink=y
 CONFIG_PKG_firmware-wifi-wilink12xx=y
 CONFIG_PKG_firmware-wifi-zd1201=y
 CONFIG_PKG_firmware-wifi-zd1211-ar5007=y
+# CONFIG_PKG_sysbios-rpmsg is not set
 
 #
 # fonts
@@ -446,6 +453,7 @@ CONFIG_PKG_fribidi=y
 # CONFIG_PKG_gdk-pixbuf is not set
 CONFIG_PKG_gettext=y
 # CONFIG_PKG_glibmm is not set
+CONFIG_PKG_gmp=y
 CONFIG_PKG_gnutls=y
 # CONFIG_PKG_grilo is not set
 # CONFIG_PKG_grilo-plugins is not set
@@ -457,6 +465,7 @@ CONFIG_PKG_gnutls=y
 # CONFIG_PKG_gupnp-igd is not set
 # CONFIG_PKG_hal is not set
 # CONFIG_PKG_hicolor-icon-theme is not set
+# CONFIG_PKG_htop is not set
 CONFIG_PKG_i18n=y
 # CONFIG_OPT_i18n_fonts is not set
 # CONFIG_PKG_icu4c is not set
@@ -466,7 +475,6 @@ CONFIG_OPT_imlib2_devtools=y
 # CONFIG_PKG_imx5-lib is not set
 # CONFIG_PKG_imx6-lib is not set
 CONFIG_PKG_jasper=y
-CONFIG_PKG_jpeg=y
 # CONFIG_PKG_json is not set
 # CONFIG_PKG_json-glib is not set
 # CONFIG_PKG_kissfft is not set
@@ -478,6 +486,7 @@ CONFIG_PKG_libaacs=y
 CONFIG_PKG_libass=y
 # CONFIG_PKG_libatasmart is not set
 # CONFIG_PKG_libavc1394 is not set
+# CONFIG_PKG_libbmm is not set
 CONFIG_PKG_libcap=y
 # CONFIG_PKG_libcdaudio is not set
 # CONFIG_PKG_libcddb is not set
@@ -485,7 +494,6 @@ CONFIG_PKG_libcdio=y
 # CONFIG_PKG_libcec is not set
 # CONFIG_PKG_libcroco is not set
 CONFIG_PKG_libdaemon=y
-# CONFIG_PKG_libdce is not set
 CONFIG_PKG_libdri2=y
 # CONFIG_PKG_libdvbpsi is not set
 CONFIG_PKG_libdvdnav=y
@@ -499,10 +507,12 @@ CONFIG_PKG_libffi=y
 CONFIG_PKG_libftdi=y
 # CONFIG_PKG_libg7221 is not set
 CONFIG_PKG_libgcrypt=y
+# CONFIG_PKG_libgles-gc is not set
 CONFIG_PKG_libgpg-error=y
 # CONFIG_PKG_libiconv is not set
 # CONFIG_PKG_libid3tag is not set
 # CONFIG_PKG_libiec61883 is not set
+CONFIG_PKG_libjpeg-turbo=y
 # CONFIG_PKG_liblockdev is not set
 CONFIG_PKG_libmad=y
 CONFIG_PKG_libmicrohttpd=y
@@ -555,6 +565,7 @@ CONFIG_PKG_libxml2=y
 CONFIG_PKG_libxslt=y
 CONFIG_PKG_libyaml=y
 CONFIG_PKG_lzo=y
+# CONFIG_PKG_marvell-ipp is not set
 # CONFIG_PKG_mediastreamer is not set
 CONFIG_PKG_mesa=y
 # CONFIG_OPT_mesa_gallium3d is not set
@@ -567,10 +578,13 @@ CONFIG_OPT_mesa_radeon=y
 CONFIG_OPT_mesa_vmwgfx=y
 CONFIG_OPT_mesa_vdpau=y
 # CONFIG_OPT_mesa_xvmc is not set
+# CONFIG_OPT_mesa_wayland is not set
+# CONFIG_PKG_mtdev is not set
 # CONFIG_PKG_mx is not set
 CONFIG_PKG_ncurses=y
 CONFIG_OPT_ncurses_terminfo=y
 # CONFIG_PKG_ncursesw is not set
+CONFIG_PKG_nettle=y
 CONFIG_PKG_openssl=y
 # CONFIG_PKG_orc is not set
 # CONFIG_PKG_ortp is not set
@@ -606,10 +620,12 @@ CONFIG_PKG_talloc=y
 # CONFIG_PKG_telepathy-sofiasip is not set
 CONFIG_PKG_tiff=y
 # CONFIG_PKG_tiler is not set
+# CONFIG_PKG_tinyxml is not set
 # CONFIG_PKG_tntnet is not set
 # CONFIG_PKG_tslib is not set
 # CONFIG_PKG_twolame is not set
 # CONFIG_PKG_v4l-utils is not set
+# CONFIG_PKG_vmeta is not set
 CONFIG_PKG_wavpack=y
 CONFIG_PKG_yajl=y
 CONFIG_PKG_zlib=y
@@ -623,14 +639,21 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_ethtool is not set
 # CONFIG_PKG_glmark2 is not set
 # CONFIG_PKG_iioutils is not set
+# CONFIG_PKG_libxkbcommon is not set
 # CONFIG_PKG_linphone is not set
 # CONFIG_PKG_madplay is not set
+# CONFIG_PKG_maliit-framework is not set
+# CONFIG_PKG_maliit-plugins is not set
+# CONFIG_PKG_nbench is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
 # CONFIG_PKG_pvr is not set
 # CONFIG_PKG_rsync is not set
+# CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
+# CONFIG_PKG_wayland is not set
 # CONFIG_PKG_webrtc-audio-processing is not set
+# CONFIG_PKG_weston is not set
 
 #
 # multimedia
@@ -664,11 +687,13 @@ CONFIG_OPT_freevo_lirc=y
 # CONFIG_PKG_gst-plugins-base is not set
 # CONFIG_PKG_gst-plugins-gl is not set
 # CONFIG_PKG_gst-plugins-good is not set
+# CONFIG_PKG_gst-plugins-ugly is not set
 # CONFIG_PKG_gst-vaapi is not set
 # CONFIG_PKG_gstreamer is not set
 # CONFIG_PKG_libav is not set
 CONFIG_PKG_libbluray=y
 CONFIG_OPT_libbluray_aacs=y
+# CONFIG_PKG_libdce is not set
 CONFIG_PKG_libdvdcss=y
 # CONFIG_PKG_libomxil-bellagio is not set
 # CONFIG_PKG_libplayer is not set
@@ -724,6 +749,7 @@ CONFIG_PKG_livepause=y
 # CONFIG_PKG_vdr-skinelchi is not set
 # CONFIG_PKG_vdr-skinenigmang is not set
 # CONFIG_PKG_vdr-skinsoppalusikka is not set
+# CONFIG_PKG_vdr-softhddevice is not set
 # CONFIG_PKG_vdr-solitaire is not set
 # CONFIG_PKG_vdr-spider is not set
 # CONFIG_PKG_vdr-streamdev-client is not set
@@ -764,11 +790,13 @@ CONFIG_PKG_iptables=y
 # CONFIG_PKG_iw is not set
 # CONFIG_PKG_mysql-client is not set
 # CONFIG_PKG_mysql-server is not set
+CONFIG_PKG_network-backend=y
 # CONFIG_PKG_olsrd is not set
 # CONFIG_PKG_openvpn is not set
 CONFIG_PKG_samba-client=y
 # CONFIG_PKG_samba-server is not set
 # CONFIG_PKG_tcpdump is not set
+# CONFIG_PKG_udhcpc is not set
 CONFIG_PKG_wireless-tools=y
 CONFIG_OPT_wirelesstools_devtools=y
 CONFIG_PKG_wpa-supplicant=y
@@ -959,7 +987,6 @@ CONFIG_OPT_linux_radeon=y
 CONFIG_OPT_linux_unichrome=y
 CONFIG_OPT_linux_vmwgfx=y
 # CONFIG_PKG_llvm is not set
-CONFIG_PKG_module-init-tools=y
 CONFIG_PKG_pciutils=y
 # CONFIG_PKG_polkit is not set
 # CONFIG_PKG_ralink-8070-3070-3370-5372-usb is not set
@@ -972,7 +999,6 @@ CONFIG_PKG_toolchain=y
 # CONFIG_PKG_uclibc is not set
 # CONFIG_PKG_uclibc-gdb is not set
 # CONFIG_PKG_uclibc-network is not set
-CONFIG_PKG_udev=y
 # CONFIG_PKG_udisks is not set
 CONFIG_PKG_util-linux-ng=y
 
@@ -997,6 +1023,7 @@ CONFIG_OPT_dialog_xdialog=y
 # CONFIG_PKG_linux-perftools is not set
 # CONFIG_PKG_lsof is not set
 # CONFIG_PKG_nano is not set
+# CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
 CONFIG_PKG_rtmpdump=y
 # CONFIG_PKG_screen is not set
@@ -1048,8 +1075,6 @@ CONFIG_OPT_libdrm_intel=y
 CONFIG_OPT_libdrm_radeon=y
 # CONFIG_OPT_libdrm_nouveau is not set
 CONFIG_OPT_libdrm_vmwgfx=y
-# CONFIG_OPT_libdrm_glamo is not set
-# CONFIG_OPT_libdrm_omap is not set
 CONFIG_PKG_libfontenc=y
 CONFIG_PKG_libpciaccess=y
 CONFIG_PKG_libxcb=y
@@ -1059,7 +1084,10 @@ CONFIG_PKG_mesa-demos=y
 CONFIG_PKG_pixman=y
 CONFIG_PKG_rxvt=y
 CONFIG_PKG_setxkbmap=y
-# CONFIG_PKG_xcb-utils is not set
+# CONFIG_PKG_xcb-util is not set
+# CONFIG_PKG_xcb-util-image is not set
+# CONFIG_PKG_xcb-util-keysyms is not set
+# CONFIG_PKG_xcb-util-wm is not set
 # CONFIG_PKG_xcompmgr is not set
 # CONFIG_PKG_xdialog is not set
 CONFIG_PKG_xdpyinfo=y
@@ -1067,6 +1095,7 @@ CONFIG_PKG_xf86-input-evdev=y
 CONFIG_PKG_xf86-input-synaptics=y
 CONFIG_PKG_xf86-video-ati=y
 # CONFIG_PKG_xf86-video-displaylink is not set
+# CONFIG_PKG_xf86-video-dove is not set
 CONFIG_PKG_xf86-video-fbdev=y
 # CONFIG_PKG_xf86-video-fglrx is not set
 # CONFIG_PKG_xf86-video-glint is not set
@@ -1110,3 +1139,4 @@ CONFIG_OPT_TARGET_LIBC="eglibc"
 CONFIG_OPT_KEYMAP="qwerty"
 CONFIG_OPT_EGL_PROVIDER="mesa"
 CONFIG_OPT_GLES_PROVIDER="mesa"
+CONFIG_OPT_NETWORK_BACKEND="connman"
