--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120622-r14537"
+CONFIG_KERNELVERSION="devel-20120730-r14886"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -34,16 +34,16 @@ CONFIG_OPT_TARGET_ARCH="arm"
 # CONFIG_TARGET_SUBARCH_armv6 is not set
 CONFIG_TARGET_SUBARCH_armv7=y
 CONFIG_OPT_TARGET_SUBARCH="armv7"
+CONFIG_TARGET_PLATFORM_arm_armada5xx=y
 # CONFIG_TARGET_PLATFORM_arm_imx5x is not set
 # CONFIG_TARGET_PLATFORM_arm_imx6 is not set
 # CONFIG_TARGET_PLATFORM_arm_omap3 is not set
 # CONFIG_TARGET_PLATFORM_arm_omap4 is not set
 # CONFIG_TARGET_PLATFORM_arm_tegra2 is not set
-CONFIG_TARGET_PLATFORM_arm_ux500=y
-CONFIG_OPT_TARGET_PLATFORM="ux500"
-# CONFIG_TARGET_MACHINE_arm_ux500_snowball-v3 is not set
-CONFIG_TARGET_MACHINE_arm_ux500_snowball-v5=y
-CONFIG_OPT_TARGET_MACHINE="snowball-v5"
+# CONFIG_TARGET_PLATFORM_arm_ux500 is not set
+CONFIG_OPT_TARGET_PLATFORM="armada5xx"
+CONFIG_TARGET_MACHINE_arm_armada5xx_cubox=y
+CONFIG_OPT_TARGET_MACHINE="cubox"
 # CONFIG_TARGET_CPU_cortex-a5 is not set
 # CONFIG_TARGET_CPU_cortex-a8 is not set
 CONFIG_TARGET_CPU_cortex-a9=y
@@ -57,10 +57,10 @@ CONFIG_TARGET_CPU_cortex-a9=y
 CONFIG_OPT_TARGET_CPU="cortex-a9"
 # CONFIG_FPU_OPTIMIZATIONS_VFP2 is not set
 # CONFIG_FPU_OPTIMIZATIONS_VFP3 is not set
-# CONFIG_FPU_OPTIMIZATIONS_VFP3D16 is not set
-CONFIG_FPU_OPTIMIZATIONS_NEON=y
+CONFIG_FPU_OPTIMIZATIONS_VFP3D16=y
+# CONFIG_FPU_OPTIMIZATIONS_NEON is not set
 # CONFIG_FPU_OPTIMIZATIONS_NONE is not set
-CONFIG_OPT_ARM_HARDFLOAT_ABI=y
+# CONFIG_OPT_ARM_HARDFLOAT_ABI is not set
 CONFIG_OPT_THUMB=y
 
 #
@@ -86,9 +86,9 @@ CONFIG_OPTIMIZATIONS_DEFAULT=y
 # CONFIG_COMPRESSION_XZ is not set
 CONFIG_COMPRESSION_GZIP=y
 # CONFIG_OPT_DYNAMIC_SYSROOT is not set
-CONFIG_OPT_EATMYDATA=y
+# CONFIG_OPT_EATMYDATA is not set
 CONFIG_OPT_VERBOSE=y
-CONFIG_OPT_CONCURRENCY_MAKE_LEVEL=8
+CONFIG_OPT_CONCURRENCY_MAKE_LEVEL=3
 # CONFIG_OPT_MIRROR is not set
 # CONFIG_OPT_REPO is not set
 
@@ -102,17 +102,18 @@ CONFIG_OPT_CONCURRENCY_MAKE_LEVEL=8
 # CONFIG_OPT_TARGET_ISO is not set
 CONFIG_OPT_TARGET_FLAT=y
 # CONFIG_OPT_TARGET_PXE is not set
-CONFIG_OPT_TARGET_TARBALL=y
+# CONFIG_OPT_TARGET_TARBALL is not set
 # CONFIG_OPT_TARGET_EXT2FS is not set
 # CONFIG_OPT_TARGET_INITRAMFS is not set
-CONFIG_OPT_TARGET_SNOWBALL_EMMC=y
 CONFIG_OPT_PACKAGE_REPO=y
-# CONFIG_TIMEZONE is not set
+CONFIG_TIMEZONE=y
+CONFIG_OPT_INCLUDED_TIMEZONES="all"
+CONFIG_OPT_TIMEZONE=""
 CONFIG_KEYMAP_QWERTY=y
 # CONFIG_KEYMAP_AZERTY is not set
 # CONFIG_KEYMAP_QWERTZ is not set
 CONFIG_LOCALE=y
-CONFIG_OPT_INCLUDED_LOCALES="en_US.UTF-8"
+CONFIG_OPT_INCLUDED_LOCALES=""
 CONFIG_OPT_DEFAULT_LOCALE="en_US.UTF-8"
 
 #
@@ -147,14 +148,12 @@ CONFIG_USE_egl=y
 # CONFIG_USE_opengl is not set
 CONFIG_USE_opengles=y
 # CONFIG_USE_openmax is not set
-CONFIG_USE_openvg=y
+# CONFIG_USE_openvg is not set
 # CONFIG_USE_vaapi is not set
 # CONFIG_EGL_PROVIDER_MESA is not set
-CONFIG_EGL_PROVIDER_MALI=y
+CONFIG_EGL_PROVIDER_VIVANTE=y
 # CONFIG_GLES_PROVIDER_MESA is not set
-CONFIG_GLES_PROVIDER_MALI=y
-# CONFIG_OVG_PROVIDER_MESA is not set
-CONFIG_OVG_PROVIDER_MALI=y
+CONFIG_GLES_PROVIDER_VIVANTE=y
 
 #
 # Input
@@ -213,8 +212,8 @@ CONFIG_OPT_FTP_SERVER=y
 # CONFIG_HTTP_SERVER is not set
 CONFIG_OPT_SAMBA=y
 # CONFIG_SAMBA_SERVER is not set
-CONFIG_AUTOMOUNTER_SMB=y
-CONFIG_AUTOMOUNTER_NFS=y
+# CONFIG_AUTOMOUNTER_SMB is not set
+# CONFIG_AUTOMOUNTER_NFS is not set
 # CONFIG_AUTOMOUNTER_9P is not set
 
 #
@@ -243,7 +242,7 @@ CONFIG_PKG_opkg=y
 # CONFIG_PKG_ar6k is not set
 CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_cwiid is not set
-# CONFIG_PKG_eventlircd is not set
+CONFIG_PKG_eventlircd=y
 # CONFIG_PKG_lirc is not set
 # CONFIG_PKG_s2-liplianin is not set
 # CONFIG_PKG_sgx530-OMAP34xx-drv is not set
@@ -265,7 +264,7 @@ CONFIG_PKG_fuse=y
 # CONFIG_PKG_mtd-utils is not set
 CONFIG_PKG_nfs-utils=y
 CONFIG_PKG_ntfs-3g=y
-# CONFIG_PKG_parted is not set
+CONFIG_PKG_parted=y
 # CONFIG_PKG_unionfs-fuse is not set
 
 #
@@ -273,40 +272,41 @@ CONFIG_PKG_ntfs-3g=y
 #
 # CONFIG_PKG_firmware-arm-imx5 is not set
 # CONFIG_PKG_firmware-arm-imx6 is not set
+# CONFIG_PKG_firmware-arm-raspberrypi is not set
 # CONFIG_PKG_firmware-arm-syslink-ipc is not set
 # CONFIG_PKG_firmware-arm-syslink-mm is not set
 # CONFIG_PKG_firmware-arm-wl1271 is not set
-# CONFIG_PKG_firmware-bluetooth-bluez is not set
-# CONFIG_PKG_firmware-dvb-af9015 is not set
-# CONFIG_PKG_firmware-dvb-avertv-a800 is not set
-# CONFIG_PKG_firmware-dvb-cx24116 is not set
-# CONFIG_PKG_firmware-dvb-cxusb-bluebird is not set
-# CONFIG_PKG_firmware-dvb-dib0700 is not set
-# CONFIG_PKG_firmware-dvb-dibusb-mb is not set
-# CONFIG_PKG_firmware-dvb-dibusb-mc is not set
-# CONFIG_PKG_firmware-dvb-dvbsky-S9xx is not set
-# CONFIG_PKG_firmware-dvb-nxt200x is not set
-# CONFIG_PKG_firmware-dvb-or51132 is not set
-# CONFIG_PKG_firmware-dvb-or51211 is not set
-# CONFIG_PKG_firmware-dvb-sp8870 is not set
-# CONFIG_PKG_firmware-dvb-sp887x is not set
-# CONFIG_PKG_firmware-dvb-tda10045 is not set
-# CONFIG_PKG_firmware-dvb-tda10046 is not set
-# CONFIG_PKG_firmware-dvb-tda10071 is not set
-# CONFIG_PKG_firmware-dvb-tevii is not set
-# CONFIG_PKG_firmware-dvb-ttpci is not set
-# CONFIG_PKG_firmware-dvb-ttusb is not set
-# CONFIG_PKG_firmware-dvb-tvwalkert is not set
-# CONFIG_PKG_firmware-dvb-umt010 is not set
-# CONFIG_PKG_firmware-dvb-vp702x is not set
-# CONFIG_PKG_firmware-dvb-vp7045 is not set
-# CONFIG_PKG_firmware-dvb-wt200u is not set
-# CONFIG_PKG_firmware-dvb-wt220u is not set
-# CONFIG_PKG_firmware-dvb-xc3028 is not set
+CONFIG_PKG_firmware-bluetooth-bluez=y
+CONFIG_PKG_firmware-dvb-af9015=y
+CONFIG_PKG_firmware-dvb-avertv-a800=y
+CONFIG_PKG_firmware-dvb-cx24116=y
+CONFIG_PKG_firmware-dvb-cxusb-bluebird=y
+CONFIG_PKG_firmware-dvb-dib0700=y
+CONFIG_PKG_firmware-dvb-dibusb-mb=y
+CONFIG_PKG_firmware-dvb-dibusb-mc=y
+CONFIG_PKG_firmware-dvb-dvbsky-S9xx=y
+CONFIG_PKG_firmware-dvb-nxt200x=y
+CONFIG_PKG_firmware-dvb-or51132=y
+CONFIG_PKG_firmware-dvb-or51211=y
+CONFIG_PKG_firmware-dvb-sp8870=y
+CONFIG_PKG_firmware-dvb-sp887x=y
+CONFIG_PKG_firmware-dvb-tda10045=y
+CONFIG_PKG_firmware-dvb-tda10046=y
+CONFIG_PKG_firmware-dvb-tda10071=y
+CONFIG_PKG_firmware-dvb-tevii=y
+CONFIG_PKG_firmware-dvb-ttpci=y
+CONFIG_PKG_firmware-dvb-ttusb=y
+CONFIG_PKG_firmware-dvb-tvwalkert=y
+CONFIG_PKG_firmware-dvb-umt010=y
+CONFIG_PKG_firmware-dvb-vp702x=y
+CONFIG_PKG_firmware-dvb-vp7045=y
+CONFIG_PKG_firmware-dvb-wt200u=y
+CONFIG_PKG_firmware-dvb-wt220u=y
+CONFIG_PKG_firmware-dvb-xc3028=y
 # CONFIG_PKG_firmware-graphics-nouveau is not set
 # CONFIG_PKG_firmware-graphics-radeon is not set
 # CONFIG_PKG_firmware-nic-wifi-realtek is not set
-CONFIG_PKG_firmware-ux500=y
+# CONFIG_PKG_firmware-ux500 is not set
 # CONFIG_PKG_firmware-wifi-acx100 is not set
 # CONFIG_PKG_firmware-wifi-acx100usb is not set
 # CONFIG_PKG_firmware-wifi-acx111usb is not set
@@ -335,6 +335,7 @@ CONFIG_PKG_firmware-ux500=y
 # CONFIG_PKG_firmware-wifi-wilink12xx is not set
 # CONFIG_PKG_firmware-wifi-zd1201 is not set
 # CONFIG_PKG_firmware-wifi-zd1211-ar5007 is not set
+# CONFIG_PKG_sysbios-rpmsg is not set
 
 #
 # fonts
@@ -380,7 +381,7 @@ CONFIG_PKG_acl=y
 CONFIG_PKG_attr=y
 CONFIG_PKG_avahi=y
 # CONFIG_OPT_avahi_qt is not set
-CONFIG_PKG_b2r2lib=y
+# CONFIG_PKG_b2r2lib is not set
 # CONFIG_PKG_bc is not set
 # CONFIG_PKG_beecrypt is not set
 CONFIG_PKG_boost=y
@@ -425,6 +426,7 @@ CONFIG_PKG_fribidi=y
 # CONFIG_PKG_gdk-pixbuf is not set
 CONFIG_PKG_gettext=y
 # CONFIG_PKG_glibmm is not set
+CONFIG_PKG_gmp=y
 CONFIG_PKG_gnutls=y
 # CONFIG_PKG_grilo is not set
 # CONFIG_PKG_grilo-plugins is not set
@@ -436,6 +438,7 @@ CONFIG_PKG_gnutls=y
 # CONFIG_PKG_gupnp-igd is not set
 # CONFIG_PKG_hal is not set
 # CONFIG_PKG_hicolor-icon-theme is not set
+# CONFIG_PKG_htop is not set
 CONFIG_PKG_i18n=y
 # CONFIG_OPT_i18n_fonts is not set
 # CONFIG_PKG_icu4c is not set
@@ -445,7 +448,6 @@ CONFIG_PKG_i18n=y
 # CONFIG_PKG_imx6-graphics is not set
 # CONFIG_PKG_imx6-lib is not set
 CONFIG_PKG_jasper=y
-CONFIG_PKG_jpeg=y
 # CONFIG_PKG_json is not set
 # CONFIG_PKG_json-glib is not set
 # CONFIG_PKG_kissfft is not set
@@ -455,8 +457,9 @@ CONFIG_PKG_jpeg=y
 # CONFIG_PKG_libSockets is not set
 CONFIG_PKG_libaacs=y
 CONFIG_PKG_libass=y
-# CONFIG_PKG_libatasmart is not set
+CONFIG_PKG_libatasmart=y
 # CONFIG_PKG_libavc1394 is not set
+CONFIG_PKG_libbmm=y
 # CONFIG_PKG_libbridge is not set
 CONFIG_PKG_libcap=y
 # CONFIG_PKG_libcdaudio is not set
@@ -467,8 +470,9 @@ CONFIG_PKG_libcec=y
 CONFIG_PKG_libdaemon=y
 CONFIG_PKG_libdri2=y
 # CONFIG_PKG_libdvbpsi is not set
-# CONFIG_PKG_libdvdnav is not set
-# CONFIG_PKG_libdvdread is not set
+CONFIG_PKG_libdvdnav=y
+CONFIG_PKG_libdvdread=y
+CONFIG_OPT_libdvdread_dvdcss=y
 # CONFIG_PKG_libeXosip2 is not set
 # CONFIG_PKG_libev is not set
 CONFIG_PKG_libevent=y
@@ -477,10 +481,12 @@ CONFIG_PKG_libffi=y
 # CONFIG_PKG_libftdi is not set
 # CONFIG_PKG_libg7221 is not set
 CONFIG_PKG_libgcrypt=y
+CONFIG_PKG_libgles-gc=y
 CONFIG_PKG_libgpg-error=y
 # CONFIG_PKG_libiconv is not set
 # CONFIG_PKG_libid3tag is not set
 # CONFIG_PKG_libiec61883 is not set
+CONFIG_PKG_libjpeg-turbo=y
 CONFIG_PKG_liblockdev=y
 CONFIG_PKG_libmad=y
 CONFIG_PKG_libmicrohttpd=y
@@ -521,7 +527,7 @@ CONFIG_PKG_libsmbclient=y
 CONFIG_PKG_libssh=y
 # CONFIG_PKG_libsvg is not set
 # CONFIG_PKG_libtelepathy is not set
-# CONFIG_PKG_libtheora is not set
+CONFIG_PKG_libtheora=y
 CONFIG_PKG_libungif=y
 CONFIG_PKG_libusb=y
 CONFIG_PKG_libusb-compat=y
@@ -534,16 +540,21 @@ CONFIG_PKG_libxml2=y
 # CONFIG_PKG_libyaml is not set
 # CONFIG_PKG_libz160 is not set
 CONFIG_PKG_lzo=y
+CONFIG_PKG_marvell-ipp=y
 # CONFIG_PKG_mediastreamer is not set
 CONFIG_PKG_mesa=y
 # CONFIG_OPT_mesa_gallium3d is not set
-CONFIG_OPT_mesa_egl=y
-CONFIG_OPT_mesa_opengles=y
-CONFIG_OPT_mesa_openvg=y
+# CONFIG_OPT_mesa_egl is not set
+# CONFIG_OPT_mesa_opengles is not set
+# CONFIG_OPT_mesa_openvg is not set
 # CONFIG_OPT_mesa_xvmc is not set
+# CONFIG_OPT_mesa_wayland is not set
+# CONFIG_PKG_mtdev is not set
 # CONFIG_PKG_mx is not set
-# CONFIG_PKG_ncurses is not set
+CONFIG_PKG_ncurses=y
+# CONFIG_OPT_ncurses_terminfo is not set
 # CONFIG_PKG_ncursesw is not set
+CONFIG_PKG_nettle=y
 CONFIG_PKG_openssl=y
 CONFIG_PKG_orc=y
 # CONFIG_PKG_ortp is not set
@@ -557,7 +568,8 @@ CONFIG_PKG_pcre=y
 # CONFIG_PKG_qt-qmf is not set
 # CONFIG_PKG_readline is not set
 # CONFIG_PKG_rest is not set
-# CONFIG_PKG_sg3-utils is not set
+CONFIG_PKG_sg3-utils=y
+CONFIG_OPT_sg3utils_devtools=y
 # CONFIG_PKG_smpeg is not set
 # CONFIG_PKG_sofia-sip is not set
 # CONFIG_PKG_spandsp is not set
@@ -585,6 +597,7 @@ CONFIG_PKG_tinyxml=y
 # CONFIG_PKG_tslib is not set
 # CONFIG_PKG_twolame is not set
 CONFIG_PKG_v4l-utils=y
+CONFIG_PKG_vmeta=y
 CONFIG_PKG_wavpack=y
 CONFIG_PKG_yajl=y
 CONFIG_PKG_zlib=y
@@ -594,19 +607,27 @@ CONFIG_PKG_zlib=y
 # misc
 #
 # CONFIG_PKG_baresip is not set
+# CONFIG_PKG_cpuburn is not set
 # CONFIG_PKG_elfutils is not set
 # CONFIG_PKG_ethtool is not set
 # CONFIG_PKG_glmark2 is not set
-CONFIG_PKG_hdmiservice=y
+# CONFIG_PKG_hdmiservice is not set
 # CONFIG_PKG_iioutils is not set
+# CONFIG_PKG_libxkbcommon is not set
 # CONFIG_PKG_linphone is not set
 # CONFIG_PKG_madplay is not set
+# CONFIG_PKG_maliit-framework is not set
+# CONFIG_PKG_maliit-plugins is not set
+# CONFIG_PKG_nbench is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
 # CONFIG_PKG_pvr is not set
 # CONFIG_PKG_rsync is not set
+# CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
+# CONFIG_PKG_wayland is not set
 # CONFIG_PKG_webrtc-audio-processing is not set
+# CONFIG_PKG_weston is not set
 
 #
 # multimedia
@@ -630,14 +651,14 @@ CONFIG_PKG_hdmiservice=y
 # CONFIG_PKG_gst-plugins-base is not set
 # CONFIG_PKG_gst-plugins-gl is not set
 # CONFIG_PKG_gst-plugins-good is not set
+# CONFIG_PKG_gst-plugins-ugly is not set
 # CONFIG_PKG_gst-vaapi is not set
 # CONFIG_PKG_gstreamer is not set
-CONFIG_PKG_libav=y
-# CONFIG_OPT_libav_vaapi is not set
+# CONFIG_PKG_libav is not set
 CONFIG_PKG_libbluray=y
 CONFIG_OPT_libbluray_aacs=y
 # CONFIG_PKG_libdce is not set
-# CONFIG_PKG_libdvdcss is not set
+CONFIG_PKG_libdvdcss=y
 # CONFIG_PKG_libomxil-bellagio is not set
 # CONFIG_PKG_libplayer is not set
 # CONFIG_PKG_libsvdrp is not set
@@ -648,7 +669,7 @@ CONFIG_OPT_libbluray_aacs=y
 # CONFIG_PKG_libvalhalla is not set
 # CONFIG_PKG_libvdpau is not set
 # CONFIG_PKG_livepause is not set
-CONFIG_PKG_mali400=y
+# CONFIG_PKG_mali400 is not set
 # CONFIG_PKG_mex is not set
 # CONFIG_PKG_mythplugins is not set
 # CONFIG_PKG_myththemes is not set
@@ -716,7 +737,7 @@ CONFIG_PKG_xbmc=y
 # CONFIG_OPT_xbmc_opengl is not set
 CONFIG_OPT_xbmc_opengles=y
 # CONFIG_OPT_xbmc_openmax is not set
-# CONFIG_OPT_xbmc_joystick is not set
+CONFIG_OPT_xbmc_joystick=y
 CONFIG_OPT_xbmc_zeroconf=y
 CONFIG_OPT_xbmc_webserver=y
 # CONFIG_OPT_xbmc_vaapi is not set
@@ -727,6 +748,7 @@ CONFIG_OPT_xbmc_bluray=y
 CONFIG_OPT_xbmc_rtmp=y
 CONFIG_OPT_xbmc_nonfree=y
 # CONFIG_OPT_xbmc_externalffmpeg is not set
+# CONFIG_OPT_xbmc_externalffmpeglibav is not set
 # CONFIG_OPT_xbmc_pvr is not set
 CONFIG_OPT_xbmc_addons=y
 CONFIG_OPT_xbmc_libcec=y
@@ -734,6 +756,11 @@ CONFIG_OPT_xbmc_libnfs=y
 # CONFIG_OPT_xbmc_afpclient is not set
 # CONFIG_OPT_xbmc_airtunes is not set
 # CONFIG_OPT_xbmc_screensavers is not set
+CONFIG_OPT_xbmc_dove=y
+# CONFIG_OPT_xbmc_gstreamer is not set
+CONFIG_OPT_xbmc_xorg=y
+CONFIG_OPT_xbmc_sdl=y
+CONFIG_OPT_xbmc_alsa=y
 # CONFIG_PKG_xbmc-addon-vdr is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
@@ -744,12 +771,10 @@ CONFIG_OPT_xbmc_libnfs=y
 #
 CONFIG_PKG_amionline=y
 # CONFIG_PKG_automounter-9p is not set
-CONFIG_PKG_automounter-nfs=y
-CONFIG_PKG_automounter-smb=y
+# CONFIG_PKG_automounter-nfs is not set
+# CONFIG_PKG_automounter-smb is not set
 CONFIG_PKG_bftpd=y
-CONFIG_PKG_bluez=y
-CONFIG_OPT_bluez_devtools=y
-# CONFIG_OPT_bluez_alsa is not set
+# CONFIG_PKG_bluez is not set
 CONFIG_PKG_connman=y
 CONFIG_OPT_connman_wifi=y
 # CONFIG_OPT_connman_bluetooth is not set
@@ -887,7 +912,7 @@ CONFIG_PKG_alsa=y
 CONFIG_PKG_alsa-lib=y
 # CONFIG_PKG_alsa-plugins is not set
 CONFIG_PKG_alsa-utils=y
-# CONFIG_OPT_alsautils_devtools is not set
+CONFIG_OPT_alsautils_devtools=y
 # CONFIG_PKG_pulseaudio is not set
 # CONFIG_PKG_rtaudio is not set
 
@@ -896,7 +921,7 @@ CONFIG_PKG_alsa-utils=y
 #
 CONFIG_PKG_automountd=y
 CONFIG_PKG_base-files=y
-# CONFIG_PKG_bash is not set
+CONFIG_PKG_bash=y
 CONFIG_PKG_busybox=y
 # CONFIG_PKG_codesourcery-libc is not set
 # CONFIG_PKG_codesourcery-libc-gconv is not set
@@ -909,9 +934,9 @@ CONFIG_OPT_dbus_xorg=y
 CONFIG_PKG_eglibc=y
 # CONFIG_OPT_eglibc_devtools is not set
 # CONFIG_OPT_eglibc_ipv6 is not set
-# CONFIG_PKG_eglibc-gconv-extra is not set
+CONFIG_PKG_eglibc-gconv-extra=y
 CONFIG_PKG_eglibc-gconv-minimal=y
-# CONFIG_PKG_eglibc-gdb is not set
+CONFIG_PKG_eglibc-gdb=y
 CONFIG_PKG_eglibc-network=y
 # CONFIG_PKG_evtest is not set
 # CONFIG_PKG_freevo-config is not set
@@ -944,20 +969,19 @@ CONFIG_OPT_linux_usbnet=y
 CONFIG_OPT_linux_v4l=y
 CONFIG_OPT_linux_wifi=y
 # CONFIG_PKG_llvm is not set
-# CONFIG_PKG_module-init-tools is not set
 CONFIG_PKG_pciutils=y
-# CONFIG_PKG_polkit is not set
+CONFIG_PKG_polkit=y
 # CONFIG_PKG_ralink-8070-3070-3370-5372-usb is not set
-CONFIG_PKG_snowball-init=y
+# CONFIG_PKG_snowball-init is not set
 CONFIG_PKG_systemd=y
 CONFIG_OPT_systemd_devtools=y
 CONFIG_OPT_SYSTEMD=y
-# CONFIG_PKG_timezone-data is not set
+CONFIG_PKG_timezone-data=y
 CONFIG_PKG_toolchain=y
 # CONFIG_PKG_uclibc is not set
 # CONFIG_PKG_uclibc-gdb is not set
 # CONFIG_PKG_uclibc-network is not set
-# CONFIG_PKG_udisks is not set
+CONFIG_PKG_udisks=y
 CONFIG_PKG_util-linux-ng=y
 
 #
@@ -966,12 +990,13 @@ CONFIG_PKG_util-linux-ng=y
 # CONFIG_PKG_OpenBM is not set
 # CONFIG_PKG_binutils-tools is not set
 # CONFIG_PKG_dcraw is not set
-# CONFIG_PKG_dialog is not set
+CONFIG_PKG_dialog=y
+# CONFIG_OPT_dialog_xdialog is not set
 # CONFIG_PKG_dsp-tools is not set
 # CONFIG_PKG_dvb-apps is not set
 # CONFIG_PKG_expedite is not set
-# CONFIG_PKG_extra-fonts-nonfree is not set
-# CONFIG_PKG_gdb is not set
+CONFIG_PKG_extra-fonts-nonfree=y
+CONFIG_PKG_gdb=y
 # CONFIG_PKG_generator is not set
 # CONFIG_PKG_graphlcd-base is not set
 # CONFIG_PKG_gtk-demo is not set
@@ -985,7 +1010,7 @@ CONFIG_PKG_util-linux-ng=y
 CONFIG_PKG_rtmpdump=y
 # CONFIG_PKG_screen is not set
 # CONFIG_PKG_snowball-mactool is not set
-# CONFIG_PKG_strace is not set
+CONFIG_PKG_strace=y
 # CONFIG_PKG_tools-generator is not set
 # CONFIG_PKG_unrar is not set
 CONFIG_PKG_usbutils=y
@@ -1030,7 +1055,7 @@ CONFIG_PKG_libXv=y
 CONFIG_PKG_libXxf86vm=y
 CONFIG_PKG_libdrm=y
 # CONFIG_OPT_libdrm_glamo is not set
-# CONFIG_OPT_libdrm_omap is not set
+CONFIG_OPT_libdrm_omap=y
 CONFIG_PKG_libfontenc=y
 CONFIG_PKG_libpciaccess=y
 CONFIG_PKG_libxcb=y
@@ -1051,11 +1076,12 @@ CONFIG_PKG_xf86-input-evdev=y
 # CONFIG_PKG_xf86-input-synaptics is not set
 # CONFIG_PKG_xf86-video-ati is not set
 # CONFIG_PKG_xf86-video-displaylink is not set
-CONFIG_PKG_xf86-video-fbdev=y
+CONFIG_PKG_xf86-video-dove=y
+# CONFIG_PKG_xf86-video-fbdev is not set
 # CONFIG_PKG_xf86-video-glamo is not set
 # CONFIG_PKG_xf86-video-imx5 is not set
 # CONFIG_PKG_xf86-video-mach64 is not set
-CONFIG_PKG_xf86-video-mali=y
+# CONFIG_PKG_xf86-video-mali is not set
 # CONFIG_PKG_xf86-video-mga is not set
 # CONFIG_PKG_xf86-video-nouveau is not set
 # CONFIG_PKG_xf86-video-nv is not set
@@ -1073,12 +1099,11 @@ CONFIG_PKG_xrandr=y
 # CONFIG_PKG_xruler is not set
 CONFIG_PKG_xvinfo=y
 CONFIG_OPT_OPTIMIZATIONS="default"
-CONFIG_OPT_FPU_OPTIMIZATIONS="neon"
+CONFIG_OPT_FPU_OPTIMIZATIONS="vfp3-d16"
 CONFIG_OPT_TOOLCHAIN_TYPE="linaro"
 CONFIG_OPT_COMPRESSION_METHOD="gzip"
 CONFIG_OPT_TARGET_LIBC="eglibc"
 CONFIG_OPT_KEYMAP="qwerty"
-CONFIG_OPT_EGL_PROVIDER="mali"
-CONFIG_OPT_GLES_PROVIDER="mali"
-CONFIG_OPT_OVG_PROVIDER="mali"
+CONFIG_OPT_EGL_PROVIDER="vivante"
+CONFIG_OPT_GLES_PROVIDER="vivante"
 CONFIG_OPT_NETWORK_BACKEND="connman"
