--- a/config/defconfigs/geexbox-xbmc-i386-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-i386-generic.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120324-r14064"
+CONFIG_KERNELVERSION="devel-20120730-r14886"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -53,6 +53,7 @@ CONFIG_TARGET_CPU_generic=y
 # CONFIG_TARGET_CPU_core2 is not set
 # CONFIG_TARGET_CPU_corei7 is not set
 # CONFIG_TARGET_CPU_corei7-avx is not set
+# CONFIG_TARGET_CPU_core-avx-i is not set
 # CONFIG_TARGET_CPU_atom is not set
 # CONFIG_TARGET_CPU_athlon is not set
 # CONFIG_TARGET_CPU_athlon-tbird is not set
@@ -68,8 +69,11 @@ CONFIG_TARGET_CPU_generic=y
 # CONFIG_TARGET_CPU_athlon64-sse3 is not set
 # CONFIG_TARGET_CPU_amdfam10 is not set
 # CONFIG_TARGET_CPU_barcelona is not set
-# CONFIG_TARGET_CPU_c3-2 is not set
 # CONFIG_TARGET_CPU_btver1 is not set
+# CONFIG_TARGET_CPU_bdver1 is not set
+# CONFIG_TARGET_CPU_bdver2 is not set
+# CONFIG_TARGET_CPU_c3-2 is not set
+# CONFIG_TARGET_CPU_amdfusion is not set
 CONFIG_OPT_TARGET_CPU="generic"
 # CONFIG_FPU_OPTIMIZATIONS_387 is not set
 # CONFIG_FPU_OPTIMIZATIONS_SSE is not set
@@ -97,6 +101,7 @@ CONFIG_OPTIMIZATIONS_SPEED=y
 CONFIG_COMPRESSION_XZ=y
 # CONFIG_COMPRESSION_GZIP is not set
 # CONFIG_OPT_DYNAMIC_SYSROOT is not set
+# CONFIG_OPT_EATMYDATA is not set
 CONFIG_OPT_VERBOSE=y
 CONFIG_OPT_CONCURRENCY_MAKE_LEVEL=3
 # CONFIG_OPT_MIRROR is not set
@@ -251,7 +256,7 @@ CONFIG_AUTOMOUNTER_NFS=y
 # CONFIG_PKG_dietsplash is not set
 CONFIG_PKG_efibootmgr=y
 # CONFIG_PKG_grub is not set
-# CONFIG_PKG_hdparm is not set
+CONFIG_PKG_hdparm=y
 CONFIG_PKG_installator=y
 CONFIG_OPT_INSTALLATOR=y
 # CONFIG_PKG_ndiswrapper-tool is not set
@@ -270,7 +275,6 @@ CONFIG_PKG_appleir=y
 CONFIG_PKG_cryptodev=y
 CONFIG_PKG_crystalhd=y
 # CONFIG_PKG_cwiid is not set
-# CONFIG_PKG_dvb-usb-rtl2832u is not set
 CONFIG_PKG_eventlircd=y
 CONFIG_PKG_lirc=y
 CONFIG_OPT_lirc_devtools=y
@@ -300,6 +304,7 @@ CONFIG_PKG_parted=y
 #
 # firmware
 #
+# CONFIG_PKG_firmware-arm-raspberrypi is not set
 CONFIG_PKG_firmware-bluetooth-bluez=y
 CONFIG_PKG_firmware-dvb-af9015=y
 CONFIG_PKG_firmware-dvb-avertv-a800=y
@@ -359,6 +364,7 @@ CONFIG_PKG_firmware-wifi-ralink=y
 # CONFIG_PKG_firmware-wifi-wilink12xx is not set
 CONFIG_PKG_firmware-wifi-zd1201=y
 CONFIG_PKG_firmware-wifi-zd1211-ar5007=y
+# CONFIG_PKG_sysbios-rpmsg is not set
 
 #
 # fonts
@@ -449,6 +455,7 @@ CONFIG_PKG_fribidi=y
 # CONFIG_PKG_gdk-pixbuf is not set
 CONFIG_PKG_gettext=y
 # CONFIG_PKG_glibmm is not set
+CONFIG_PKG_gmp=y
 CONFIG_PKG_gnutls=y
 # CONFIG_PKG_grilo is not set
 # CONFIG_PKG_grilo-plugins is not set
@@ -460,6 +467,7 @@ CONFIG_PKG_gnutls=y
 # CONFIG_PKG_gupnp-igd is not set
 # CONFIG_PKG_hal is not set
 # CONFIG_PKG_hicolor-icon-theme is not set
+# CONFIG_PKG_htop is not set
 CONFIG_PKG_i18n=y
 # CONFIG_OPT_i18n_fonts is not set
 # CONFIG_PKG_icu4c is not set
@@ -467,7 +475,6 @@ CONFIG_PKG_i18n=y
 # CONFIG_PKG_imx5-lib is not set
 # CONFIG_PKG_imx6-lib is not set
 CONFIG_PKG_jasper=y
-CONFIG_PKG_jpeg=y
 # CONFIG_PKG_json is not set
 # CONFIG_PKG_json-glib is not set
 # CONFIG_PKG_kissfft is not set
@@ -479,6 +486,7 @@ CONFIG_PKG_libaacs=y
 CONFIG_PKG_libass=y
 CONFIG_PKG_libatasmart=y
 # CONFIG_PKG_libavc1394 is not set
+# CONFIG_PKG_libbmm is not set
 CONFIG_PKG_libcap=y
 # CONFIG_PKG_libcdaudio is not set
 # CONFIG_PKG_libcddb is not set
@@ -486,7 +494,6 @@ CONFIG_PKG_libcdio=y
 CONFIG_PKG_libcec=y
 # CONFIG_PKG_libcroco is not set
 CONFIG_PKG_libdaemon=y
-# CONFIG_PKG_libdce is not set
 CONFIG_PKG_libdri2=y
 # CONFIG_PKG_libdvbpsi is not set
 # CONFIG_PKG_libdvdnav is not set
@@ -499,11 +506,13 @@ CONFIG_PKG_libffi=y
 CONFIG_PKG_libftdi=y
 # CONFIG_PKG_libg7221 is not set
 CONFIG_PKG_libgcrypt=y
+# CONFIG_PKG_libgles-gc is not set
 CONFIG_PKG_libgpg-error=y
 # CONFIG_PKG_libiconv is not set
 # CONFIG_PKG_libid3tag is not set
 # CONFIG_PKG_libiec61883 is not set
-# CONFIG_PKG_liblockdev is not set
+CONFIG_PKG_libjpeg-turbo=y
+CONFIG_PKG_liblockdev=y
 CONFIG_PKG_libmad=y
 CONFIG_PKG_libmicrohttpd=y
 CONFIG_PKG_libmms=y
@@ -555,6 +564,7 @@ CONFIG_PKG_libxml2=y
 # CONFIG_PKG_libxslt is not set
 # CONFIG_PKG_libyaml is not set
 CONFIG_PKG_lzo=y
+# CONFIG_PKG_marvell-ipp is not set
 # CONFIG_PKG_mediastreamer is not set
 CONFIG_PKG_mesa=y
 CONFIG_OPT_mesa_gallium3d=y
@@ -567,10 +577,13 @@ CONFIG_OPT_mesa_nouveau=y
 # CONFIG_OPT_mesa_vmwgfx is not set
 CONFIG_OPT_mesa_vdpau=y
 CONFIG_OPT_mesa_xvmc=y
+# CONFIG_OPT_mesa_wayland is not set
+# CONFIG_PKG_mtdev is not set
 # CONFIG_PKG_mx is not set
 CONFIG_PKG_ncurses=y
 # CONFIG_OPT_ncurses_terminfo is not set
 # CONFIG_PKG_ncursesw is not set
+CONFIG_PKG_nettle=y
 CONFIG_PKG_openssl=y
 # CONFIG_PKG_orc is not set
 # CONFIG_PKG_ortp is not set
@@ -610,6 +623,7 @@ CONFIG_PKG_tinyxml=y
 # CONFIG_PKG_tslib is not set
 # CONFIG_PKG_twolame is not set
 CONFIG_PKG_v4l-utils=y
+# CONFIG_PKG_vmeta is not set
 CONFIG_PKG_wavpack=y
 CONFIG_PKG_yajl=y
 CONFIG_PKG_zlib=y
@@ -623,16 +637,23 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_ethtool is not set
 # CONFIG_PKG_glmark2 is not set
 # CONFIG_PKG_iioutils is not set
+# CONFIG_PKG_libxkbcommon is not set
 # CONFIG_PKG_linphone is not set
 # CONFIG_PKG_madplay is not set
+# CONFIG_PKG_maliit-framework is not set
+# CONFIG_PKG_maliit-plugins is not set
+# CONFIG_PKG_nbench is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
 CONFIG_PKG_pvr=y
 CONFIG_OPT_pvr_tvheadend=y
 CONFIG_OPT_pvr_vdr=y
 # CONFIG_PKG_rsync is not set
+# CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
+# CONFIG_PKG_wayland is not set
 # CONFIG_PKG_webrtc-audio-processing is not set
+# CONFIG_PKG_weston is not set
 
 #
 # multimedia
@@ -657,11 +678,13 @@ CONFIG_OPT_ffmpeg_vaapi=y
 # CONFIG_PKG_gst-plugins-base is not set
 # CONFIG_PKG_gst-plugins-gl is not set
 # CONFIG_PKG_gst-plugins-good is not set
+# CONFIG_PKG_gst-plugins-ugly is not set
 # CONFIG_PKG_gst-vaapi is not set
 # CONFIG_PKG_gstreamer is not set
 # CONFIG_PKG_libav is not set
 CONFIG_PKG_libbluray=y
 CONFIG_OPT_libbluray_aacs=y
+# CONFIG_PKG_libdce is not set
 # CONFIG_PKG_libdvdcss is not set
 # CONFIG_PKG_libomxil-bellagio is not set
 # CONFIG_PKG_libplayer is not set
@@ -718,6 +741,7 @@ CONFIG_PKG_vdr-sc=m
 # CONFIG_PKG_vdr-skinelchi is not set
 # CONFIG_PKG_vdr-skinenigmang is not set
 # CONFIG_PKG_vdr-skinsoppalusikka is not set
+# CONFIG_PKG_vdr-softhddevice is not set
 # CONFIG_PKG_vdr-solitaire is not set
 # CONFIG_PKG_vdr-spider is not set
 # CONFIG_PKG_vdr-streamdev-client is not set
@@ -749,6 +773,7 @@ CONFIG_OPT_xbmc_bluray=y
 CONFIG_OPT_xbmc_rtmp=y
 CONFIG_OPT_xbmc_nonfree=y
 # CONFIG_OPT_xbmc_externalffmpeg is not set
+# CONFIG_OPT_xbmc_externalffmpeglibav is not set
 CONFIG_OPT_xbmc_pvr=y
 CONFIG_OPT_xbmc_addons=y
 CONFIG_OPT_xbmc_libcec=y
@@ -756,6 +781,11 @@ CONFIG_OPT_xbmc_libnfs=y
 CONFIG_OPT_xbmc_afpclient=y
 CONFIG_OPT_xbmc_airtunes=y
 CONFIG_OPT_xbmc_screensavers=y
+# CONFIG_OPT_xbmc_dove is not set
+# CONFIG_OPT_xbmc_gstreamer is not set
+CONFIG_OPT_xbmc_xorg=y
+CONFIG_OPT_xbmc_sdl=y
+CONFIG_OPT_xbmc_alsa=y
 CONFIG_PKG_xbmc-addon-vdr=y
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
@@ -977,7 +1007,6 @@ CONFIG_OPT_linux_radeon=y
 CONFIG_OPT_linux_unichrome=y
 CONFIG_OPT_linux_vmwgfx=y
 CONFIG_PKG_llvm=y
-CONFIG_PKG_module-init-tools=y
 CONFIG_PKG_pciutils=y
 CONFIG_PKG_polkit=y
 # CONFIG_PKG_ralink-8070-3070-3370-5372-usb is not set
@@ -990,7 +1019,6 @@ CONFIG_PKG_toolchain=y
 # CONFIG_PKG_uclibc is not set
 # CONFIG_PKG_uclibc-gdb is not set
 # CONFIG_PKG_uclibc-network is not set
-CONFIG_PKG_udev=y
 CONFIG_PKG_udisks=y
 CONFIG_PKG_util-linux-ng=y
 
@@ -1015,6 +1043,7 @@ CONFIG_PKG_extra-fonts-nonfree=y
 # CONFIG_PKG_linux-perftools is not set
 CONFIG_PKG_lsof=y
 CONFIG_PKG_nano=y
+# CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
 CONFIG_PKG_rtmpdump=y
 # CONFIG_PKG_screen is not set
@@ -1066,8 +1095,6 @@ CONFIG_OPT_libdrm_intel=y
 CONFIG_OPT_libdrm_radeon=y
 CONFIG_OPT_libdrm_nouveau=y
 CONFIG_OPT_libdrm_vmwgfx=y
-# CONFIG_OPT_libdrm_glamo is not set
-# CONFIG_OPT_libdrm_omap is not set
 CONFIG_PKG_libfontenc=y
 CONFIG_PKG_libpciaccess=y
 CONFIG_PKG_libxcb=y
@@ -1077,7 +1104,10 @@ CONFIG_PKG_mesa-demos=y
 CONFIG_PKG_pixman=y
 # CONFIG_PKG_rxvt is not set
 CONFIG_PKG_setxkbmap=y
-# CONFIG_PKG_xcb-utils is not set
+# CONFIG_PKG_xcb-util is not set
+# CONFIG_PKG_xcb-util-image is not set
+# CONFIG_PKG_xcb-util-keysyms is not set
+# CONFIG_PKG_xcb-util-wm is not set
 # CONFIG_PKG_xcompmgr is not set
 # CONFIG_PKG_xdialog is not set
 CONFIG_PKG_xdpyinfo=y
@@ -1085,6 +1115,7 @@ CONFIG_PKG_xf86-input-evdev=y
 CONFIG_PKG_xf86-input-synaptics=y
 CONFIG_PKG_xf86-video-ati=y
 CONFIG_PKG_xf86-video-displaylink=y
+# CONFIG_PKG_xf86-video-dove is not set
 CONFIG_PKG_xf86-video-fbdev=y
 CONFIG_PKG_xf86-video-fglrx=m
 # CONFIG_PKG_xf86-video-glint is not set
