xf86-video-dove : no need to force resolution (solved by upgrading linux

--- a/packages/xf86-video-dove/config/30-cubox.conf
+++ b/packages/xf86-video-dove/config/30-cubox.conf
@@ -1,7 +1,7 @@
 Section "Monitor"
         Identifier      "lvds"
         Option          "PreferredMode" "1920x1080"
-        Option          "NoDDCValue"  "true"
+#        Option          "NoDDCValue"  "true"
 EndSection
 
 Section "Device"
@@ -9,14 +9,14 @@ Section "Device"
         Driver          "dovefb"
 EndSection
 
-Section "Screen"
-        Device          "Driver0"
-        Identifier      "Primary Screen"
-        Monitor         "lvds"
-        SubSection "Display"
-                Depth     24
-                Modes    "1920x1080" "1360x768" "1280x720" "1024x768" "800x600" "720x480" "640x480"
-                Virtual 2048 2048
-        EndSubSection
-EndSection
+#Section "Screen"
+#        Device          "Driver0"
+#        Identifier      "Primary Screen"
+#        Monitor         "lvds"
+#        SubSection "Display"
+#                Depth     24
+#                Modes    "1920x1080" "1360x768" "1280x720" "1024x768" "800x600" "720x480" "640x480"
+#                Virtual 2048 2048
+#        EndSubSection
+#EndSection
 
