firmware-arm-raspberrypi: use 128/128 firmware, mark package as arm and non-free

--- a/packages/firmware-arm-raspberrypi/build
+++ b/packages/firmware-arm-raspberrypi/build
@@ -7,7 +7,9 @@ cd $BUILD/$1*
 [ "$ARM_HARDFLOAT_ABI" = yes ] && VC=hardfp/opt/vc || VC=opt/vc
 
 mkdir -p .install/boot
-cp -P boot/*.elf boot/*.bin .install/boot
+# use 128/128 ARM/GPU split firmware
+cp -P boot/arm128_start.elf .install/boot/start.elf
+cp -P boot/bootcode.bin boot/loader.bin .install/boot
 
 install_dir="$PWD/.install"
 debug_dir="$PWD/.install-debuginfo/usr/lib/debug"
