This patches solves the compiling issue due to libtool.
When cross-compiling, libtool may want to look into /usr/lib prior to the sysroot.
gmp fails with this error :
/usr/lib/libstdc++.so: file not recognized: File format not recognized
collect2: ld returned 1 exit status
libtool: install: error: relink `libgmpxx.la' with the above command

This seems to be a well known error, but still a libtool bug ?

--- a/packages/gmp/build
+++ b/packages/gmp/build
@@ -8,6 +8,8 @@ cd $PKG_BUILD_DIR
 
 export CFLAGS="$CFLAGS -fPIC"
 export CPPFLAGS="$CPPFLAGS -fexceptions"
+export LDFLAGS="-L$ROOT/$TOOLCHAIN/$TARGET_NAME/lib"
+export LIBDIR="$SYSROOT_PREFIX/lib"
 
 mkdir -p objdir-target
 cd objdir-target
