automounter-nfs : fix unit, rework script one more time, execute automounter_nfs in background

--- a/packages/automounter-nfs/unit/automounter-nfs.service
+++ b/packages/automounter-nfs/unit/automounter-nfs.service
@@ -1,13 +1,12 @@
 [Unit]
 Description=Mount NFS resources
 ConditionPathExists=/etc/nfs
+After=network.target
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/automount_nfs
+ExecStart=/usr/bin/automount_nfs.sh
 RemainAfterExit=yes
-Wants=network.target
-After=network.target
 
 [Install]
 WantedBy=multi-user.target
