Update and harmonize the use of CONFIG_OPT_KEYMAP

--- a/packages/xorg-server/build
+++ b/packages/xorg-server/build
@@ -2,9 +2,11 @@
 
 . config/options
 
+get_meta $1
+
 $SCRIPTS/unpack mesa
 
-cd $BUILD/$1*
+cd $PKG_BUILD_DIR
 
 do_autoconf
 
@@ -17,6 +19,7 @@ export GL_LIBS=" "
 export DRI_CFLAGS="-I$LIB_PREFIX/include"
 export DRI_LIBS=" "
 sed -i 's%dridriverdir=`$PKG_CONFIG --variable=dridriverdir dri`%dridriverdir=/usr/lib/dri%' configure
+get_meta $1
 
 export LIBS="-ludev"
 GCC_NO_GOLD=1 GCC_NO_LTO=1 \
