xbmc : fix addons

--- a/packages/xbmc/build
+++ b/packages/xbmc/build
@@ -125,8 +125,9 @@ make_install
 
 if [ "$TARGET_ARCH" = arm ]; then
   # workaround to make the addons run
-  ln -sf /usr/lib/xbmc/system/python/python27-arm.so \
-    .install/usr/share/xbmc/system/python/python27-arm.so
+  ln -sf /usr/lib/xbmc/addons/library.xbmc.addon/libXBMC_addon-arm.so .install/usr/lib/xbmc/addons/library.xbmc.addon/libXBMC_addon-arm-linux.so
+  ln -sf /usr/lib/xbmc/addons/library.xbmc.gui/libXBMC_gui-arm.so .install/usr/lib/xbmc/addons/library.xbmc.gui/libXBMC_gui-arm.solibXBMC_gui-arm-linux.so
+  ln -sf /usr/lib/xbmc/addons/library.xbmc.pvr/libXBMC_pvr-arm.so .install/usr/lib/xbmc/addons/library.xbmc.pvr/libXBMC_pvr-arm-linux.so
 fi
 
 for i in .install/usr/lib/xbmc/system/players/dvdplayer/*; do
