pulseaudio : bump to 2.0

--- a/packages/pulseaudio/build
+++ b/packages/pulseaudio/build
@@ -4,6 +4,7 @@
 
 cd $BUILD/$1*
 export LIBS="-ldl"
+
 do_configure \
             --enable-silent-rules \
             --disable-rpath \
@@ -15,7 +16,7 @@ do_configure \
             --disable-oss-output \
             --disable-oss-wrapper \
             --disable-solaris \
-            --disable-glib2 \
+            --enable-glib2 \
             --disable-gtk2 \
             --disable-gconf \
             --disable-avahi \
@@ -36,7 +37,8 @@ do_configure \
 
 make
 
-export MAKEFLAGS=-j1
 make_install
 sed -i 's%user="pulse"%user="root"%g' \
   .install/etc/dbus-1/system.d/pulseaudio-system.conf
+
+ln -s pulseaudio/libpulsecommon-2.0.so .install/lib/libpulsecommon-2.0.so
