eventlircd : fix unit

--- a/packages/eventlircd/unit/eventlircd.service
+++ b/packages/eventlircd/unit/eventlircd.service
@@ -6,6 +6,7 @@ Before=xorg.service
 [Service]
 EnvironmentFile=/etc/eventlircd.conf
 Type=forking
+ExecStartPre=/bin/mkdir -p /var/run/lirc
 ExecStart=/usr/sbin/eventlircd $EV_OPTS
 
 [Install]
